翻訳データの追加

--- a/localisation/english/countries_africa/geacps_EGY_l_english.yml
+++ b/localisation/english/countries_africa/geacps_EGY_l_english.yml
@@ -106,3 +106,109 @@
  EGY_air_defence_network_for_whole_country:0 "Nationwide Air Defense Network"
  EGY_buy_radar:0 "Buy Radars"
  EGY_focus_tree:0 "[ROOT.GetName] focus tree"
+ EGY_survival_of_monarchy_desc:0 "TODO"
+ EGY_royal_foundation_desc:0 "TODO"
+ EGY_cairo_national_museum_desc:0 "TODO"
+ EGY_hold_a_parliamentary_session_desc:0 "TODO"
+ EGY_lifting_ban_on_strikes_desc:0 "TODO"
+ EGY_development_of_insurance_system_desc:0 "TODO"
+ EGY_democratic_constitutional_reform_desc:0 "TODO"
+ EGY_utilization_GBR_connections_desc:0 "TODO"
+ EGY_revolution_made_desc:0 "TODO"
+ EGY_new_constitution_desc:0 "TODO"
+ EGY_utilization_of_royal_property_desc:0 "TODO"
+ EGY_free_officers_movement_desc:0 "TODO"
+ EGY_nasser_guidance_desc:0 "TODO"
+ EGY_weapons_from_CZE_desc:0 "TODO"
+ EGY_socialist_division_desc:0 "TODO"
+ EGY_incite_nationalism_desc:0 "TODO"
+ EGY_communist_party_desc:0 "TODO"
+ EGY_faction_integration_desc:0 "TODO"
+ EGY_penetration_to_workers_desc:0 "TODO"
+ EGY_grasp_of_military_desc:0 "TODO"
+ EGY_diplomacy_diversion_desc:0 "TODO"
+ EGY_to_western_bloc_desc:0 "TODO"
+ EGY_talks_with_ISR_desc:0 "TODO"
+ EGY_settlement_desc:0 "TODO"
+ EGY_join_western_bloc_desc:0 "TODO"
+ EGY_from_the_arab_to_world_desc:0 "TODO"
+ EGY_independence_of_arab_world_desc:0 "TODO"
+ EGY_overthrow_desc:0 "TODO"
+ EGY_leader_of_middle_east_desc:0 "TODO"
+ EGY_cairo_conference_desc:0 "TODO"
+ EGY_to_eastern_bloc_desc:0 "TODO"
+ EGY_certain_distance_desc:0 "TODO"
+ EGY_nonmilitary_exchange_desc:0 "TODO"
+ EGY_as_nonaligned_nation_desc:0 "TODO"
+ EGY_railroad_from_HUN_desc:0 "TODO"
+ EGY_friendship_with_YUG_desc:0 "TODO"
+ EGY_arab_socialism_desc:0 "TODO"
+ EGY_joining_baath_party_desc:0 "TODO"
+ EGY_request_to_PER_desc:0 "TODO"
+ EGY_arab_recovery_desc:0 "TODO"
+ EGY_end_of_war_economy_desc:0 "TODO"
+ EGY_support_for_misr_group_desc:0 "TODO"
+ EGY_nationalization_of_industry_desc:0 "TODO"
+ EGY_economic_management_agency_desc:0 "TODO"
+ EGY_steering_toward_liberalization_desc:0 "TODO"
+ EGY_support_for_company_start_up_desc:0 "TODO"
+ EGY_achieve_increase_in_domestic_demand_desc:0 "TODO"
+ EGY_egyptian_economic_independence_plan_desc:0 "TODO"
+ EGY_establishment_of_modern_banks_desc:0 "TODO"
+ EGY_subsidies_for_islamic_banks_desc:0 "TODO"
+ EGY_promoting_entrepreneurship_to_wealthy_desc:0 "TODO"
+ EGY_regulation_of_foreigninvested_enterprises_desc:0 "TODO"
+ EGY_investment_in_cotton_industry_desc:0 "TODO"
+ EGY_modernization_of_agriculture_desc:0 "TODO"
+ EGY_construction_of_nile_dam_desc:0 "TODO"
+ EGY_the_second_plan_desc:0 "TODO"
+ EGY_suez_canal_desc:0 "TODO"
+ EGY_nationalization_of_canal_desc:0 "TODO"
+ EGY_monopoly_on_stocks_desc:0 "TODO"
+ EGY_suez_management_agency_desc:0 "TODO"
+ EGY_tourism_industry_desc:0 "TODO"
+ EGY_cairo_airport_desc:0 "TODO"
+ EGY_reminder_to_GBR_FRA_desc:0 "TODO"
+ EGY_assiut_agreement_desc:0 "TODO"
+ EGY_development_of_red_sea_coast_desc:0 "TODO"
+ EGY_overseas_worker_desc:0 "TODO"
+ EGY_gather_immigrants_desc:0 "TODO"
+ EGY_promote_influx_desc:0 "TODO"
+ EGY_simplification_of_passport_applications_desc:0 "TODO"
+ EGY_encourage_job_growth_desc:0 "TODO"
+ EGY_expansion_of_public_works_desc:0 "TODO"
+ EGY_measures_for_overcrowded_cities_desc:0 "TODO"
+ EGY_arab_league_conception_desc:0 "TODO"
+ EGY_loose_cooperation_desc:0 "TODO"
+ EGY_joint_defence_council_desc:0 "TODO"
+ EGY_red_sea_free_agreement_desc:0 "TODO"
+ EGY_islamic_countries_defense_pact_desc:0 "TODO"
+ EGY_strong_coalition_concept_desc:0 "TODO"
+ EGY_pressure_on_LEB_desc:0 "TODO"
+ EGY_national_unity_with_SYR_desc:0 "TODO"
+ EGY_support_PAL_desc:0 "TODO"
+ EGY_middle_east_war_desc:0 "TODO"
+ EGY_arab_union_desc:0 "TODO"
+ EGY_military_preparation_desc:0 "TODO"
+ EGY_army_reorganization_desc:0 "TODO"
+ EGY_desert_tank_desc:0 "TODO"
+ EGY_formulation_of_doctrine_desc:0 "TODO"
+ EGY_egyptan_fire_powar_warfare_desc:0 "TODO"
+ EGY_buy_from_GBR_desc:0 "TODO"
+ EGY_contract_with_FRA_desc:0 "TODO"
+ EGY_reform_of_national_military_academy_desc:0 "TODO"
+ EGY_establishment_of_special_forces_desc:0 "TODO"
+ EGY_weapons_from_eastern_bloc_desc:0 "TODO"
+ EGY_naval_reorganization_desc:0 "TODO"
+ EGY_buy_GBR_ships_desc:0 "TODO"
+ EGY_socotra_joint_exercise_desc:0 "TODO"
+ EGY_buy_JAP_ships_desc:0 "TODO"
+ EGY_exchange_student_agreements_desc:0 "TODO"
+ EGY_alexandria_military_port_desc:0 "TODO"
+ EGY_development_of_air_force_desc:0 "TODO"
+ EGY_training_of_pilots_desc:0 "TODO"
+ EGY_western_bloc_desc:0 "TODO"
+ EGY_eastern_bloc_desc:0 "TODO"
+ EGY_cairo_air_base_desc:0 "TODO"
+ EGY_air_defence_network_for_whole_country_desc:0 "TODO"
+ EGY_buy_radar_desc:0 "TODO"
