--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -405,18 +405,18 @@
  JAP_focus_tree:0 "[ROOT.GetName] focus tree"
  JAP.100.t:0 "Operation Wuhan"
  JAP.100.d:0 "Operation Wuhan"
- JAP.100.0:0 "祝武漢入城"
- JAP_military.001.t:0 "海軍を主導する人材の選定"
- JAP_military.001.d:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
- JAP_military.001.0:0 "航空主兵主義者を据え置く"
- JAP_military.001.1:0 "大艦巨砲主義者を再び"
- JAP_military.001.2:0 "夜戦第一主義者を探し出す"
+ JAP.100.0:0 "Celebrate our entry into Wuhan"
+ JAP_military.001.t:0 "Navy Leadership Selection"
+ JAP_military.001.d:0 "During the Pacific War, it was found that completely different tactics from those used in previous conflict were vital. Keeping this in mind, we now need to choose who'll lead the Imperial Fleet in the coming age. This is a matter of national survival, so it must be carefully considered..."
+ JAP_military.001.0:0 "Defer to the Aviation Theorists"
+ JAP_military.001.1:0 "Keep proponents of the Big Ship-Big Gun theory"
+ JAP_military.001.2:0 "Look for Night Fighting theorists"
  JAP_military.002.t:0 "The [GetYear] National Research Policy Charter"
- JAP_military.002.d:0 "新たな国策研究の方針を立てなければいけない"
+ JAP_military.002.d:0 "We must formulate a new national research policy."
  JAP_military.002.0:0 "Military research"
  JAP_military.002.1:0 "Civilian research"
  JAP_military.003.t:0 "The [GetYear] National Research Policy Charter"
- JAP_military.003.d:0 "軍事研究の促進において特に重視すべきことはなんであるか。"
+ JAP_military.003.d:0 "What should be emphasized in promoting military research?"
  JAP_military.003.0:0 "Army"
  JAP_military.003.1:0 "Navy"
  JAP_military.003.2:0 "Airforce"
