--- a/localisation/english/countries_asia/geacps_JOR_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JOR_l_english.yml
@@ -12,3 +12,4 @@
  JOR.2.d:0 "The London Treaty came into effect today, and Transjordan achieved independence from the United Kingdom. Although there are still restrictions on its sovereignty, this will work as a first try at independence for the country."
  JOR.2.0:0 "When will total independence come?"
  JOR_focus_tree:0 "[ROOT.GetName] focus tree"
+ JOR_signing_london_treaty_desc:0 "TODO"
