--- a/localisation/english/countries_europe/geacps_CZE_l_english.yml
+++ b/localisation/english/countries_europe/geacps_CZE_l_english.yml
@@ -67,7 +67,150 @@
  CZE_slovak_line:0 "The Slovakia Line"
  CZE_withdrawal_line:0 "Fall-back Lines"
  CZE_socialist_industrialization:0 "Socialist Industrialization"
- CZE_People's_Democracy_Manifesto:0 "People's Democracy Manifesto"
  CZE_state_security:0 "StB"
  CZE_focus_tree:0 "[ROOT.GetName] focus tree"
  CZE_focus_on_CAS:0 "Focus on Close Air Support"
+ CZE_resurrection_desc:0 "TODO"
+ CZE_joint_with_exiles_desc:0 "TODO"
+ CZE_establish_constitution_desc:0 "TODO"
+ CZE_purge_tisso_faction_desc:0 "TODO"
+ CZE_remember_herba_desc:0 "TODO"
+ CZE_cheer_up_slovak_desc:0 "TODO"
+ CZE_beness_relaxtion_desc:0 "TODO"
+ CZE_republic_procalm_desc:0 "TODO"
+ CZE_democratic_election_desc:0 "TODO"
+ CZE_fate_of_masaryk_desc:0 "TODO"
+ CZE_select_dobchek_desc:0 "TODO"
+ CZE_peoples_socialism_desc:0 "TODO"
+ CZE_start_liberalization_desc:0 "TODO"
+ CZE_with_other_partys_desc:0 "TODO"
+ CZE_support_slovak_democracy_desc:0 "TODO"
+ CZE_select_gottwald_desc:0 "TODO"
+ CZE_systematic_coup_desc:0 "TODO"
+ CZE_czech_superiority_desc:0 "TODO"
+ CZE_for_stalinism_desc:0 "TODO"
+ CZE_start_nationalizaion_desc:0 "TODO"
+ CZE_peoples_democracy_desc:0 "TODO"
+ CZE_select_zapotokki_desc:0 "TODO"
+ CZE_independent_route_desc:0 "TODO"
+ CZE_rivival_soc_dem_desc:0 "TODO"
+ CZE_reconciliation_desc:0 "TODO"
+ CZE_ban_communism_desc:0 "TODO"
+ CZE_friendship_with_powers_desc:0 "TODO"
+ CZE_another_to_west_desc:0 "TODO"
+ CZE_befriend_east_desc:0 "TODO"
+ CZE_east_europe_democratic_union_desc:0 "TODO"
+ CZE_befriend_west_desc:0 "TODO"
+ CZE_weapon_export_west_desc:0 "TODO"
+ CZE_middle_of_europe_desc:0 "TODO"
+ CZE_to_the_allys_desc:0 "TODO"
+ CZE_independent_diplo_desc:0 "TODO"
+ CZE_befriend_with_friends_desc:0 "TODO"
+ CZE_third_way_desc:0 "TODO"
+ CZE_following_comintern_desc:0 "TODO"
+ CZE_mutual_id_Economy_desc:0 "TODO"
+ CZE_joint_tank_research_desc:0 "TODO"
+ CZE_rostov_agreement_desc:0 "TODO"
+ CZE_neutralization_desc:0 "TODO"
+ CZE_remove_politcs_in_comintern_desc:0 "TODO"
+ CZE_joint_military_organization_desc:0 "TODO"
+ CZE_rearmament_desc:0 "TODO"
+ CZE_cze_defence_force_desc:0 "TODO"
+ CZE_absorption_slovak_army_desc:0 "TODO"
+ CZE_solution_racial_problem_desc:0 "TODO"
+ CZE_with_firepower_desc:0 "TODO"
+ CZE_enhanced_artillery_desc:0 "TODO"
+ CZE_automobileization_desc:0 "TODO"
+ CZE_anti_tank_development_desc:0 "TODO"
+ CZE_soviet_tank_desc:0 "TODO"
+ CZE_socialist_industrialization_desc:0 "TODO"
+ CZE_anti_tank_warfare_desc:0 "TODO"
+ CZE_lesson_of_sudeten_desc:0 "TODO"
+ CZE_focus_on_intel_desc:0 "TODO"
+ CZE_rearmament_air_force_desc:0 "TODO"
+ CZE_cooperation_with_companies_desc:0 "TODO"
+ CZE_focus_on_anti_air_desc:0 "TODO"
+ CZE_focus_on_air_superiority_desc:0 "TODO"
+ CZE_focus_on_CAS_desc:0 "TODO"
+ CZE_focus_on_bombing_desc:0 "TODO"
+ CZE_flying_fortress_desc:0 "TODO"
+ CZE_re_fortify_desc:0 "TODO"
+ CZE_basic_fortress_desc:0 "TODO"
+ CZE_re_fortify_in_sudeten_desc:0 "TODO"
+ CZE_slovak_line_desc:0 "TODO"
+ CZE_withdrawal_line_desc:0 "TODO"
+ CZE_for_middle_class:0 "Aid the Middle Class"
+ CZE_for_middle_class_desc:0 "TODO"
+ CZE_for_lower_class:0 "Work for the Lower Class"
+ CZE_for_lower_class_desc:0 "TODO"
+ CZE_overcoming:0 "Overcome Disparities"
+ CZE_overcoming_desc:0 "TODO"
+ CZE_rural_industry_protection:0 "Protect the Countryside"
+ CZE_rural_industry_protection_desc:0 "TODO"
+ CZE_glass_production:0 "Promote the Production of Bohemian Glass"
+ CZE_glass_production_desc:0 "TODO"
+ CZE_oil_independence:0 "Aim for Oil Self-sufficiency"
+ CZE_oil_independence_desc:0 "TODO"
+ CZE_invest_to_slovak:0 "Invest in Slovakia"
+ CZE_invest_to_slovak_desc:0 "TODO"
+ CZE_high_industrialization:0 "Industrialize the Whole Nation"
+ CZE_high_industrialization_desc:0 "TODO"
+ CZE_weapon_export:0 "Weapon Exports"
+ CZE_weapon_export_desc:0 "TODO"
+ CZE_standardization:0 "Promote Standardization"
+ CZE_standardization_desc:0 "TODO"
+ CZE_increase_weapon_production:0 "Increase Weapon Production"
+ CZE_increase_weapon_production_desc:0 "TODO"
+ CZE_fast_industrization:0 "Rapid Industrialization"
+ CZE_fast_industrization_desc:0 "TODO"
+ CZE_factory_of_slovak:0 "Factories of Slovakia"
+ CZE_factory_of_slovak_desc:0 "TODO"
+ CZE_expansion:0 "Expand the Masaryk University"
+ CZE_expansion_desc:0 "TODO"
+ CZE_heart_of_europe:0 "The Heart of Europe"
+ CZE_heart_of_europe_desc:0 "TODO"
+ CZE_desire_of_us:0 "Finally, the Sea"
+ CZE_desire_of_us_desc:0 "TODO"
+ CZE_sea_lion:0 "Proud like the Lion"
+ CZE_sea_lion_desc:0 "TODO"
+ CZE_sea_wolf:0 "In a Group like the Wolf"
+ CZE_sea_wolf_desc:0 "TODO"
+ CZE_focus_on_mass_production:0 "Focus on Mass Production"
+ CZE_focus_on_mass_production_desc:0 "TODO"
+ CZE_focus_on_doctrin:0 "Focus on Doctrine"
+ CZE_focus_on_doctrin_desc:0 "TODO"
+ CZE_focus_on_cannon:0 "Diversion by Field Artillery"
+ CZE_focus_on_cannon_desc:0 "TODO"
+ CZE_advanced_hull:0 "Advanced Hulls"
+ CZE_advanced_hull_desc:0 "TODO"
+ CZE_czechslovakia_navy:0 "The [ROOT.GetName] Navy"
+ CZE_czechslovakia_navy_desc:0 "TODO"
+ CZE_build_shipyard:0 "Focus on the Shipbuilding Industry"
+ CZE_build_shipyard_desc:0 "TODO"
+ CZE_officer_education:0 "Officer Education"
+ CZE_officer_education_desc:0 "TODO"
+ CZE_technican_education:0 "Technical Education"
+ CZE_technican_education_desc:0 "TODO"
+ CZE_naval_academy:0 "Marines Academy"
+ CZE_naval_academy_desc:0 "TODO"
+ CZE_slow_industrization:0 "Gradual Industrialization"
+ CZE_slow_industrization_desc:0 "TODO"
+ CZE_power_to_war_industry:0 "Restore the Munitions Industry"
+ CZE_power_to_war_industry_desc:0 "TODO"
+ CZE_skoda:0 "Reopen Skoda"
+ CZE_skoda_desc:0 "TODO"
+ CZE_up_minimum_wage:0 "Increase the Minimum Wage"
+ CZE_up_minimum_wage_desc:0 "TODO"
+ CZE_power_to_state_enterprise:0 "Strengthen State-owned Industries"
+ CZE_power_to_state_enterprise_desc:0 "TODO"
+ CZE_new_economy_policy:0 "Introduce Necip Policies"
+ CZE_new_economy_policy_desc:0 "TODO"
+ CZE_organization_union:0 "Organize the Workers Unions"
+ CZE_organization_union_desc:0 "TODO"
+ CZE_redevelopment_Prague:0 "Redevelop Prague"
+ CZE_redevelopment_Prague_desc:0 "TODO"
+ CZE_mine_activation:0 "Reopen of the Brno Coal Mine"
+ CZE_mine_activation_desc:0 "TODO"
+ CZE_build_infra:0 "Enhance Public Infrastructure"
+ CZE_build_infra_desc:0 "TODO"
+ CZE_peoples_democracy_manifesto:0 "People's Democracy Manifesto"
