--- a/localisation/english/countries_europe/geacps_GER_l_english.yml
+++ b/localisation/english/countries_europe/geacps_GER_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
  GER_the_berlin_declaration:0 "The Berlin Declaration"
  GER_potsdam_agreement:0 "The Potsdam Agreement"
- GER_denazification:0 "Denazification"
  GER_the_east-west_german_wall:0 "\"East-West Germany\" Wall"
+ GER_halfway_denazification:0 "Half-way Denazification"
+ GER_halfway_denazification_desc:0 "The lack of trials against war criminals by the discordant victorious powers has resulted in an incomplete denazification process."
