--- a/localisation/english/countries_europe/geacps_RHI_l_english.yml
+++ b/localisation/english/countries_europe/geacps_RHI_l_english.yml
@@ -16,4 +16,4 @@
  RHI_news.2.0:0 "\"Retun home to the Fatherland\""
  RHI_focus_tree:0 "[ROOT.GetName] focus tree"
  RHI_reunification_with_industrial_zone:0 "Reunification with Industrial Zone"
- RHI_reunification_with_industrial_zone_desc:0 ""
+ RHI_reunification_with_industrial_zone_desc:0 "TODO"
