--- a/localisation/english/countries_europe/geacps_SAR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SAR_l_english.yml
@@ -16,4 +16,4 @@
  SAR_news.2.0:0 "\"Retun home to the Fatherland\""
  SAR_focus_tree:0 "[ROOT.GetName] focus tree"
  SAR_reunification_with_the_basin_area:0 "Reunification with the Basin Area"
- SAR_reunification_with_the_basin_area_desc:0 ""
+ SAR_reunification_with_the_basin_area_desc:0 "TODO"
