--- a/localisation/english/countries_new_continent/geacps_ARG_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_ARG_l_english.yml
@@ -86,3 +86,46 @@
  ARG.1.t:0 ""
  ARG.1.d:0 ""
  ARG.1.0:0 ""
+ ARG_army_realignment_desc:0 "TODO"
+ ARG_army_organization_desc:0 "TODO"
+ ARG_guidance_on_the_development_of_cas_desc:0 "TODO"
+ ARG_armoured_vehicles_to_protect_us_desc:0 "TODO"
+ ARG_goddess_of_war_desc:0 "TODO"
+ ARG_crush_the_sky_desc:0 "TODO"
+ ARG_modern_infantry_rifles_desc:0 "TODO"
+ ARG_improved_support_equipment_desc:0 "TODO"
+ ARG_antiarmour_equipment_desc:0 "TODO"
+ ARG_air_force_realignment_desc:0 "TODO"
+ ARG_german_military_officer_in_exile_to_our_country_desc:0 "TODO"
+ ARG_pilot_training_desc:0 "TODO"
+ ARG_february_election_desc:0 "TODO"
+ ARG_labour_party_desc:0 "TODO"
+ ARG_enacted_the_evita_act_desc:0 "TODO"
+ ARG_oppression_of_dissenters_desc:0 "TODO"
+ ARG_establishment_of_the_eva_peron_foundation_desc:0 "TODO"
+ ARG_launch_of_the_five_year_plan_desc:0 "TODO"
+ ARG_suburban_industrial_park_developments_ii_desc:0 "TODO"
+ ARG_railway_construction_desc:0 "TODO"
+ ARG_declaration_of_economic_independence_desc:0 "TODO"
+ ARG_nationalisation_of_private_banks_desc:0 "TODO"
+ ARG_contributions_to_housing_construction_desc:0 "TODO"
+ ARG_establishment_of_the_national_atomic_energy_commission_desc:0 "TODO"
+ ARG_trade_unipolarisation_desc:0 "TODO"
+ ARG_improved_public_health_desc:0 "TODO"
+ ARG_free_university_desc:0 "TODO"
+ ARG_emergency_citizens_alliance_desc:0 "TODO"
+ ARG_transition_to_a_fairer_society_desc:0 "TODO"
+ ARG_cooperation_with_GBR_desc:0 "TODO"
+ ARG_approached_to_join_GBR_faction_desc:0 "TODO"
+ ARG_suburban_industrial_park_developments_desc:0 "TODO"
+ ARG_further_development_of_heavy_industry_desc:0 "TODO"
+ ARG_somisa_established_desc:0 "TODO"
+ ARG_ime_established_desc:0 "TODO"
+ ARG_ime_factory_construction_desc:0 "TODO"
+ ARG_protecting_south_america_desc:0 "TODO"
+ ARG_neighbouring_state_desc:0 "TODO"
+ ARG_strong_alliances_desc:0 "TODO"
+ ARG_to_the_north_desc:0 "TODO"
+ ARG_alliance_unity_desc:0 "TODO"
+ ARG_establishment_of_the_institute_desc:0 "TODO"
+ ARG_new_railway_network_desc:0 "TODO"
