--- a/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
@@ -1,5 +1,4 @@
 ﻿l_english:
- BRA_launch_of_the_salte_programme:0 "Launch the SALTE Program"
  BRA_outlawing_of_the_communist_party:0 "Outlaw the Partido Comunista"
  BRA_army_reform:0 "Army Reform"
  BRA_improved_infantry_firepower:0 "Enhance the Infantry's Firepower"
@@ -15,19 +14,16 @@
  BRA_permission_to_form_trade_unions:0 "Allow the Formation of Workers Unions"
  BRA_decriminalisation_of_gambling:0 "Decriminalize Gambling"
  BRA_final_planning_stage:0 "Final Planning Stages"
- BRA_salte_programs_sea:0 "Sea SALTE Program"
  BRA_refurbishment_of_older_vessels:0 "Refurbish Old Vessels"
  BRA_maritime_air_base:0 "Maritime Air Bases "
  BRA_cannons_of_the_great_ocean:0 "Blue-Water Cannons"
  BRA_dew_sweeper_ship:0 "Outrider Ships"
  BRA_main_shield:0 "Shielding Force"
- BRA_salte_sky_programme:0 "Sky SALTE Program"
  BRA_key_to_air_combat:0 "The Key to Air Warfare"
  BRA_faster_fighter:0 "Faster Fighters"
  BRA_modern_air_force_research:0 "Research Modern Airforce"
  BRA_air_support_aircraft_research:0 "Support Aircrafts Research"
  BRA_air_assault:0 "Assault from the Skies"
- BRA_salte_plan:0 "SALTE Program"
  BRA_gambling_decriminalisation:0 "Decriminalized Gambling"
  BRA_petrobras:0 "Petróleo Brasileiro S.A\nPetrobras"
  BRA.1.t:0 "SALTE Program - Start"
@@ -38,3 +34,35 @@
  BRA.2.0:0 "Complete the project!"
  BRA_establish_petrobras:0 "Establish Petrobras"
  BRA_focus_tree:0 "[ROOT.GetName] focus tree"
+ BRA_launch_of_the_salte_programme:0 "Begin the SALTE Program"
+ BRA_launch_of_the_salte_programme_desc:0 "TODO"
+ BRA_outlawing_of_the_communist_party_desc:0 "TODO"
+ BRA_army_reform_desc:0 "TODO"
+ BRA_improved_infantry_firepower_desc:0 "TODO"
+ BRA_improved_logistical_support_desc:0 "TODO"
+ BRA_antitank_force_studies_desc:0 "TODO"
+ BRA_reorganisation_of_artillery_units_desc:0 "TODO"
+ BRA_formation_of_antiaircraft_units_desc:0 "TODO"
+ BRA_development_of_the_so_paulo_industrial_zone_desc:0 "TODO"
+ BRA_establishment_of_petrobras_desc:0 "TODO"
+ BRA_construction_of_the_rpbc_desc:0 "TODO"
+ BRA_oil_exploration_desc:0 "TODO"
+ BRA_economic_liberalisation_desc:0 "TODO"
+ BRA_permission_to_form_trade_unions_desc:0 "TODO"
+ BRA_decriminalisation_of_gambling_desc:0 "TODO"
+ BRA_final_planning_stage_desc:0 "TODO"
+ BRA_salte_programs_sea:0 "SALTE Program in the Sea"
+ BRA_salte_programs_sea_desc:0 "TODO"
+ BRA_refurbishment_of_older_vessels_desc:0 "TODO"
+ BRA_maritime_air_base_desc:0 "TODO"
+ BRA_cannons_of_the_great_ocean_desc:0 "TODO"
+ BRA_dew_sweeper_ship_desc:0 "TODO"
+ BRA_main_shield_desc:0 "TODO"
+ BRA_salte_sky_programme:0 "SALTE Program in the Air"
+ BRA_salte_sky_programme_desc:0 "TODO"
+ BRA_key_to_air_combat_desc:0 "TODO"
+ BRA_faster_fighter_desc:0 "TODO"
+ BRA_modern_air_force_research_desc:0 "TODO"
+ BRA_air_support_aircraft_research_desc:0 "TODO"
+ BRA_air_assault_desc:0 "TODO"
+ BRA_salte_plan:0 "The SALTE Program"
