--- a/localisation/english/countries_new_continent/geacps_PRU_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_PRU_l_english.yml
@@ -1,23 +1,83 @@
 ﻿l_english:
-#国家方針
- PRU_restoring_the_revolution:0 "革命の回復"
- PRU_referendum_in_BOL:0 "ボリビアでの国民投票."
- PRU_enactment_of_the_mining_act:0 "鉱業法の制定"
- PRU_promotion_of_electrification:0 "電化の推進"
- PRU_enactment_of_the_basic_army_law:0 "陸軍基本法の制定"
- PRU_recovery_of_former_bolivian_territories:0 "ボリビアの旧領を回収"
- PRU_revenge_of_the_pacific_war:0 "太平洋戦争の復讐"
- PRU_construction_of_the_central_military_hospital:0 "中央軍事病院の建設"
- PRU_construction_of_the_central_hospital_for_employees_social_security:0 "従業員社会保障中央病院の建設"
- PRU_military_purges:0 "軍隊の粛清"
- PRU_establishment_of_the_national_housing_corporation:0 "国立住宅公社の設立"
- PRU_removal_of_export_restrictions:0 "輸出制限の撤廃"
- PRU_construction_of_the_pacocha_dam:0 "パコチャダムの建設"
- PRU_outlawing_the_peoples_party:0 "人民党の非合法化"
- PRU_establishment_of_the_andean_community:0 "アンデス共同体の設立"
- PRU_improving_local_education:0 "地方教育の充実化"
- PRU_establishment_of_workers_support_centres:0 "労働者支援センターの設立"
- 
-#国民精神
- 
-#イベント
+ PRU_restoring_the_revolution:0 "Restore the Revolution"
+ PRU_restoring_the_revolution_desc:0 "TODO"
+ PRU_referendum_in_BOL:0 "Referendum in Bolivia"
+ PRU_referendum_in_BOL_desc:0 "TODO"
+ PRU_enactment_of_the_mining_act:0 "Promulgate the Mining Act"
+ PRU_enactment_of_the_mining_act_desc:0 "TODO"
+ PRU_promotion_of_electrification:0 "Promote Electrification"
+ PRU_promotion_of_electrification_desc:0 "TODO"
+ PRU_enactment_of_the_basic_army_law:0 "Promulgate the Army Bases Law"
+ PRU_enactment_of_the_basic_army_law_desc:0 "TODO"
+ PRU_recovery_of_former_bolivian_territories:0 "Reclaim our Bolivian Territories"
+ PRU_recovery_of_former_bolivian_territories_desc:0 "TODO"
+ PRU_revenge_of_the_pacific_war:0 "Revenge for the Pacific War"
+ PRU_revenge_of_the_pacific_war_desc:0 "TODO"
+ PRU_construction_of_the_central_military_hospital:0 "Build the Central Military Hospital"
+ PRU_construction_of_the_central_military_hospital_desc:0 "TODO"
+ PRU_construction_of_the_central_hospital_for_employees_social_security:0 "Bulid the Central Hospital for Employee Welfare"
+ PRU_construction_of_the_central_hospital_for_employees_social_security_desc:0 "TODO"
+ PRU_military_purges:0 "Military Purges"
+ PRU_military_purges_desc:0 "TODO"
+ PRU_establishment_of_the_national_housing_corporation:0 "Establish the National Housing Corporation"
+ PRU_establishment_of_the_national_housing_corporation_desc:0 "TODO"
+ PRU_removal_of_export_restrictions:0 "Remove Restrictions on Exports"
+ PRU_removal_of_export_restrictions_desc:0 "TODO"
+ PRU_construction_of_the_pacocha_dam:0 "Build the Pacocha Dam"
+ PRU_construction_of_the_pacocha_dam_desc:0 "TODO"
+ PRU_outlawing_the_peoples_party:0 "Outlaw the Partido Popular"
+ PRU_outlawing_the_peoples_party_desc:0 "TODO"
+ PRU_establishment_of_the_andean_community:0 "Found the Andean Community"
+ PRU_establishment_of_the_andean_community_desc:0 "TODO"
+ PRU_improving_local_education:0 "Improve Rural Education"
+ PRU_improving_local_education_desc:0 "TODO"
+ PRU_establishment_of_workers_support_centres:0 "Establish Worker Support Centers"
+ PRU_establishment_of_workers_support_centres_desc:0 "TODO"
+ PRU_mining_act:0 "The Mining Act"
+ PRU_practice_of_modernisation:0 "Promoting Modernization"
+ PRU_basic_army_law:0 "The Army Bases Law"
+ PRU_civil_military_medical_care_0:0 "Civilian-Military Medicine"
+ PRU_civil_military_medical_care_1:0 "Civilian-Military Medicine"
+ PRU_energy_independence_orientation:0 "Towards Energy Independence"
+ PRU_andean_honour:0 "Andean Honor"
+ PRU_improved_education_and_social_security_0:0 "Improved Education and Social Security"
+ PRU_improved_education_and_social_security_1:0 "Improved Education and Social Security"
+ PRU.1.t:0 "Restoring the Revolution"
+ PRU.1.d:0 "The revolution of Arequipa broke for just, noble and patriotic purposes: saving the armed forces, the basis of national defense, rebuilding democracy, restoring the Constitution and, finally, ending the era of misery and poverty overwhelming our people."
+ PRU.1.0:0 "Dismantle the Rivero Administration"
+ PRU.2.t:0 "Referendum in Bolivia"
+ PRU.2.d:0 "Once, we were united in a confederation. However, it was dissolved by the intervention of Brazil and Argentina, and the 1870 Pacific War seemingly put an end to its possible return.\nIn recent years, there has been a surge of public sentiment in Bolivia to re-establish the Confederation; in terms of building a strong nation, this wouldn't be of any disadvantage to Peru."
+ PRU.2.0:0 "Demand the referendum"
+ PRU.3.t:0 "Peru demands Referendum"
+ PRU.3.d:0 ""
+ PRU.3.0:0 "It's all up to the people to decide"
+ PRU.3.1:0 "We are, and will always be, Bolivia"
+ PRU.4.t:0 "Referendum on a new Peru-Bolivian Confederation"
+ PRU.4.d:0 "Bolivia was once part of a powerful union with Peru spanning central South America. However, it was dissolved by the intervention of its neighbors, and the 1870 Pacific War seemingly put an end to its possible return. In recent years, there has been a surge of public sentiment in Bolivia to re-establish this confederation. This is likely due to their defeat in the Chaco War, as well as economic and political instability."
+ PRU.4.0:0 "The Confederation is our destiny!"
+ PRU.4.1:0 "We're fed up with confederations"
+ PRU.4.2:0 "It doesn't matter anymore..."
+ PRU.5.t:0 "The Referendum is a Success"
+ PRU.5.d.0:0 "The day has finally come: the referendum in Bolivia has passed by a majority, resulting in the rebirth of the Confederation alongside Peru. We have opened up the Bolivian border and reunited the two nations for the first time in almost 100 years."
+ PRU.5.d.1:0 "The day has finally come: the referendum has passed by a majority, resulting in the rebirth of the Confederation alongside Peru. We have opened up the Peruvian border and reunited the two nations for the first time in almost 100 years."
+ PRU.5.0:0 "Let's celebrate this glorious day!"
+ PRU.5.1:0 "Let's celebrate this glorious day!"
+ PRU.6.t:0 "The Referendum is a Failure"
+ PRU.6.d.0:0 "The referendum in Bolivia has failed to win a majority, as did the chance to restore the Confederation."
+ PRU.6.d.1:0 "The referendum didn't reach a majority. The people chose to keep their independence as Bolivians."
+ PRU.6.0:0 "Should've taken it by force"
+ PRU.6.1:0 "Hurrah for independence!"
+ PRU.6.2:0 "It was rigged!"
+ PRU.6.3:0 "Can't be helped..."
+ PRU.7.t:0 "Bolivia refuses to hold Referendum"
+ PRU.7.d:0 "What clowns. They have denied democracy and undermined the will of the people. We must liberate the Bolivian people and save them from oppression."
+ PRU.7.0:0 "Save the Bolivians!"
+ PRU.8.t:0 "The Peru-Bolivian Confederation is Reborn"
+ PRU.8.d:0 "The day has finally come: the evil Bolivian regime has fallen and now our flag is fluttering all over their country. We have reformed the Confederation, our long-cherished wish. We have opened up the Bolivian border and reunited the two nations for the first time in almost 100 years."
+ PRU.8.0:0 "It's the culmination of a great feat!"
+ PRU.9.t:0 "The Army Bases Law"
+ PRU.9.d:0 "This law contains all appropriate regulations for the military sector, like military promotions, martial law, etc. This will increase the morale of both soldiers and officers."
+ PRU.9.0:0 "So that military discipline won't be disturbed"
+ PRU.10.t:0 "Military Purges"
+ PRU.10.d:0 "The other day, we arrested several military officers plotting to rebel against the state. They wanted to overthrow the nation and the duly-elected President, taking power for their own good. With this, there will be no one who'll try it again... at least for a while."
+ PRU.10.0:0 "Military discipline has been disturbed"
