--- a/localisation/english/countries_new_continent/geacps_USA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_USA_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  USA_sour_loser:0 "Bitter Defeat"
- USA_sour_loser_desc:0 ""
+ USA_sour_loser_desc:0 "TODO"
  USA_failed_new_deal:0 "Failure of the New Deal"
- USA_failed_new_deal_desc:0 ""
+ USA_failed_new_deal_desc:0 "TODO"
  USA_war_debt:0 "Repaying War Debts"
- USA_war_debt_desc:0 ""
+ USA_war_debt_desc:0 "TODO"
  USA_war_indemnity:0 "War Reparations"
- USA_war_indemnity_desc:0 ""
+ USA_war_indemnity_desc:0 "TODO"
  USA_spread_dissatisfaction:0 "Widespread Discontent"
- USA_spread_dissatisfaction_desc:0 ""
+ USA_spread_dissatisfaction_desc:0 "TODO"
  USA_ACW.0.t:0 "The American Collapse"
  USA_ACW.0.desc:0 "text"
  USA_ACW.0.a:0 "Happy New Year!"
@@ -73,59 +73,59 @@
  USA_ACW.17.desc:0 "REPLACE_ME"
  USA_ACW.17.a:0 "Traitors! Destroy them!"
  USA_our_past_glory:0 "Past Glory"
- USA_our_past_glory_desc:0 ""
+ USA_our_past_glory_desc:0 "TODO"
  USA_national_stability_law:0 "National Stability Act"
- USA_national_stability_law_desc:0 ""
+ USA_national_stability_law_desc:0 "TODO"
  USA_national_security_law:0 "National Security Act"
- USA_national_security_law_desc:0 ""
+ USA_national_security_law_desc:0 "TODO"
  USA_all_out_resistance:0 "All-out Resistance"
- USA_all_out_resistance_desc:0 ""
+ USA_all_out_resistance_desc:0 "TODO"
  USA_restore_the_federal_government:0 "Restore the Federal Government"
- USA_restore_the_federal_government_desc:0 ""
+ USA_restore_the_federal_government_desc:0 "TODO"
  USA_the_1947_special_presidential_election:0 "The 1947 Special Presidential Election"
- USA_the_1947_special_presidential_election_desc:0 ""
+ USA_the_1947_special_presidential_election_desc:0 "TODO"
  USA_the_chicago_convention:0 "The Chicago Convention"
- USA_the_chicago_convention_desc:0 ""
+ USA_the_chicago_convention_desc:0 "TODO"
  USA_rebuild_our_civilian_economy:0 "Rebuild our Civilian Economy"
- USA_rebuild_our_civilian_economy_desc:0 ""
+ USA_rebuild_our_civilian_economy_desc:0 "TODO"
  USA_the_3rd_indian_removal_act:0 "The Third Indian Removal Act"
- USA_the_3rd_indian_removal_act_desc:0 ""
+ USA_the_3rd_indian_removal_act_desc:0 "TODO"
  USA_24_hour_stock_market_activity:0 "24-hours Open Stock Market"
- USA_24_hour_stock_market_activity_desc:0 ""
+ USA_24_hour_stock_market_activity_desc:0 "TODO"
  USA_rebuild_washington_d_c:0 "Rebuild Washington"
- USA_rebuild_washington_d_c_desc:0 ""
+ USA_rebuild_washington_d_c_desc:0 "TODO"
  USA_welcome_the_investors:0 "Welcome the Investors"
- USA_welcome_the_investors_desc:0 ""
+ USA_welcome_the_investors_desc:0 "TODO"
  USA_establish_the_reconstruction_agency:0 "Establish a Reconstruction Agency"
- USA_establish_the_reconstruction_agency_desc:0 ""
+ USA_establish_the_reconstruction_agency_desc:0 "TODO"
  USA_factory_of_the_world:0 "Workshop of the World"
- USA_factory_of_the_world_desc:0 ""
+ USA_factory_of_the_world_desc:0 "TODO"
  USA_expand_the_scholarship_system:0 "Expand the Scholarship System"
- USA_expand_the_scholarship_system_desc:0 ""
+ USA_expand_the_scholarship_system_desc:0 "TODO"
  USA_JAP_non_intervention_treaty:0 "US-Japan Non-Intervention Treaty"
- USA_JAP_non_intervention_treaty_desc:0 ""
+ USA_JAP_non_intervention_treaty_desc:0 "TODO"
  USA_protect_IRE:0 "Protect Ireland"
- USA_protect_IRE_desc:0 ""
+ USA_protect_IRE_desc:0 "TODO"
  USA_the_continental_congress:0 "The Continental Conference"
- USA_the_continental_congress_desc:0 ""
+ USA_the_continental_congress_desc:0 "TODO"
  USA_spread_the_ideal_of_independence:0 "Spread the Ideal of Independence"
- USA_spread_the_ideal_of_independence_desc:0 ""
+ USA_spread_the_ideal_of_independence_desc:0 "TODO"
  USA_the_paris_conference:0 "The Paris Conference"
- USA_the_paris_conference_desc:0 ""
+ USA_the_paris_conference_desc:0 "TODO"
  USA_we_are_invincible:0 "We are Invincible"
- USA_we_are_invincible_desc:0 ""
+ USA_we_are_invincible_desc:0 "TODO"
  USA_crush_JAP:0 "Crush Japan"
- USA_crush_JAP_desc:0 ""
+ USA_crush_JAP_desc:0 "TODO"
  USA_operation_downfall:0 "Operation Downfall"
- USA_operation_downfall_desc:0 ""
+ USA_operation_downfall_desc:0 "TODO"
  USA_ban_totalitarianism:0 "Ban Totalitarianisms"
- USA_ban_totalitarianism_desc:0 ""
+ USA_ban_totalitarianism_desc:0 "TODO"
  USA_diplomatic_solution:0 "The Diplomatic Solution"
- USA_diplomatic_solution_desc:0 ""
+ USA_diplomatic_solution_desc:0 "TODO"
  USA_military_invasion:0 "Military Invasions"
- USA_military_invasion_desc:0 ""
+ USA_military_invasion_desc:0 "TODO"
  USA_overthrow_our_former_master:0 "Overthrow our Former Overlord"
- USA_overthrow_our_former_master_desc:0 ""
+ USA_overthrow_our_former_master_desc:0 "TODO"
  USA_historical_compromise:0 "The Historical Compromise"
- USA_historical_compromise_desc:0 ""
+ USA_historical_compromise_desc:0 "TODO"
  USA_focus_tree:0 "[ROOT.GetName] focus tree"
