--- a/localisation/english/generic/geacps_characters_l_english.yml
+++ b/localisation/english/generic/geacps_characters_l_english.yml
@@ -44,7 +44,7 @@
  CHARACTER_faisal_bin_ghazi_bin_faisal_bin_hussein_bin_ali_desc:0 "King of Iraq"
  CHARACTER_chayyim_azriel_vaytsman:0 "Chaim Azriel Weizmann"
  CHARACTER_chayyim_azriel_vaytsman_desc:0 "President of Israel"
- CHARACTER_JAP_reigning_emperor:0 "Reigning Emperor"
+ CHARACTER_JAP_reigning_emperor:0 "Kinjō Tennō"
  CHARACTER_hirohito:0 "Hirohito"
  CHARACTER_hirohito_desc:0 "124th Emperor of Japan. Real name Hirohito, honorific title Michinomiya. His personal seal is a wakatake (bamboo).\nRegent from November 11, 1921 to December 25, 1926 due to his father Emperor Taisho's deteriorating health.\nHe's considered as \"Sovereign of the Nation\" and \"Head of State of the Japan-Hawai'i Union\" under the current Constitution of the Empire of Japan."
  CHARACTER_morimasa_nashimoto:0 "Morimasa Nashimoto"
@@ -146,7 +146,7 @@
  CHARACTER_nichipar_yakovlevich_natalevich_desc:0 "Chairman of the Supreme Soviet of the Belarusian SSR"
  CHARACTER_simeon_ii:0 "Simeon II"
  CHARACTER_simeon_borisov_sakskoburggotski:0 "Simeon Borisov Sakskoburggotski"
- CHARACTER_simeon_borisov_sakskoburggotski_desc:0 "Tsar of Bulgaria"
+ CHARACTER_simeon_borisov_sakskoburggotski_desc:0 ""
  CHARACTER_vasil_petrov_kolarov:0 "Vasil Petrov Kolarov"
  CHARACTER_vasil_petrov_kolarov_desc:0 ""
  CHARACTER_edvard_benes:0 "Edvard Benesh"
@@ -460,7 +460,7 @@
  CHARACTER_henri_pierre_nicolas_desc:0 "Governor of Cameroon"
  CHARACTER_marie_emile_antoine_bethouart_desc:0 "High Commissioner for French Austria"
  CHARACTER_curt_ernst_carl_schumacher:0 "Curt Ernst Carl Schumacher"
- CHARACTER_curt_ernst_carl_schumacher_desc:0 "Federal President of the Federal Republic of Germany"
+ CHARACTER_curt_ernst_carl_schumacher_desc:0 "President of the Federal Republic of Germany"
  CHARACTER_theodor_heuss:0 "Teodor Heuss"
  CHARACTER_arpad_szakasits:0 "Szakasits Árpád"
  CHARACTER_arpad_szakasits_desc:0 ""
@@ -476,3 +476,14 @@
  CHARACTER_lev_davidovich_bronstein_desc:0 ""
  CHARACTER_nikolai_ivanovich_bukharin:0 "Nikolai Ivanovich Bukharin"
  CHARACTER_nikolai_ivanovich_bukharin_desc:0 ""
+ CHARACTER_boris_iii:0 "Boris III"
+ CHARACTER_boris_klemens_robert_maria_pius_ludwig_stanislaus_xaver_sakskoburggotski:0 "Boris Klemens Robert Maria Pius Ludwig Stanislaus Xaver Sakskob"
+ CHARACTER_boris_klemens_robert_maria_pius_ludwig_stanislaus_xaver_sakskoburggotski_desc:0 "Tsar"
+ CHARACTER_HUN_high_national_council:0 "High Nationa Concil"
+ CHARACTER_jose_luis_bustamante_y_rivero:0 "Jose Luis Bustamante y Rivero"
+ CHARACTER_jose_luis_bustamante_y_rivero_desc:0 ""
+ CHARACTER_manuel_a_odria:0 "Manuel A. Odría"
+ CHARACTER_manuel_arturo_odria_amoretti:0 "Manuel Arturo Odría Amoretti"
+ CHARACTER_manuel_arturo_odria_amoretti_desc:0 ""
+ CHARACTER_tomas_berreta_gandolfo:0 "Tomás Berreta Gandolfo"
+ CHARACTER_tomas_berreta_gandolfo_desc:0 ""
