--- a/localisation/english/generic/geacps_ideologies_l_english.yml
+++ b/localisation/english/generic/geacps_ideologies_l_english.yml
@@ -1,24 +1,24 @@
 ﻿l_english:
- total_socialism:0 "Totalitarian Socialist"
+ total_socialism:0 "Totalitarian Socialism"
  total_socialism_noun:0 "Totalitarian Socialism"
  total_socialism_desc:0 "Totalitarian Regime"
- radical_socialism:0 "Radical Socialist"
+ radical_socialism:0 "Radical Socialism"
  radical_socialism_noun:0 "Radical Socialism"
  radical_socialism_desc:0 "Totalitarian Regime"
- social_democracy:0 "Social Democratic"
+ social_democracy:0 "Social Democracy"
  social_democracy_noun:0 "Social Democracy"
  social_democracy_desc:0 "Democratic Regime"
- authoritative_democracy:0 "Authoritarian Democratic"
+ authoritative_democracy:0 "Authoritarian Democracy"
  authoritative_democracy_noun:0 "Authoritarian Democracy"
  authoritative_democracy_desc:0 "Democratic Regime"
- national_populism:0 "National Populist"
+ national_populism:0 "National Populism"
  national_populism_noun:0 "National Populism"
  national_populism_desc:0 "Totalitarian Regime"
- total_socialism_drift:0 "Daily Totalitarian Socialist support"
- radical_socialism_drift:0 "Daily Radical Socialist support"
- social_democracy_drift:0 "Daily Social Democratic support"
- authoritative_democracy_drift:0 "Daily Authoritarian Democratic support"
- national_populism_drift:0 "Daily National Populist support"
+ total_socialism_drift:0 "Daily Totalitarian Socialism support"
+ radical_socialism_drift:0 "Daily Radical Socialism support"
+ social_democracy_drift:0 "Daily Social Democracy support"
+ authoritative_democracy_drift:0 "Daily Authoritarian Democracy support"
+ national_populism_drift:0 "Daily National Populism support"
  total_socialism_acceptance:0 "Acceptance of Totalitarian Socialist diplomacy"
  radical_socialism_acceptance:0 "Acceptance of Radical Socialist diplomacy"
  social_democracy_acceptance:0 "Acceptance of Social Democratic diplomacy"
@@ -30,26 +30,26 @@
  radical_socialism_ideology_desc:0 ""
  social_democracy_ideology:0 "Social Democracy"
  social_democracy_ideology_desc:0 ""
- liberal_democracy:0 "Liberal Democratic"
+ liberal_democracy:0 "Liberal Democracy"
  liberal_democracy_noun:0 "Liberal Democracy"
  liberal_democracy_desc:0 "Democratic Regime"
- liberal_democracy_drift:0 "Daily Liberal Democratic support"
+ liberal_democracy_drift:0 "Daily Liberal Democracy support"
  liberal_democracy_acceptance:0 "Acceptance of Liberal Democratic diplomacy"
  liberal_democracy_ideology:0 "Liberal Democracy"
  liberal_democracy_ideology_desc:0 ""
- conservative_democracy:0 "Conservative Democratic"
+ conservative_democracy:0 "Conservative Democracy"
  conservative_democracy_noun:0 "Conservative Democracy"
  conservative_democracy_desc:0 "Democratic Regime"
- conservative_democracy_drift:0 "Daily Conservative Democratic support"
+ conservative_democracy_drift:0 "Daily Conservative Democracy support"
  conservative_democracy_acceptance:0 "Acceptance of Conservative Democratic diplomacy"
  conservative_democracy_ideology:0 "Conservative Democracy"
  conservative_democracy_ideology_desc:0 ""
  authoritative_democracy_ideology:0 "Authoritarian Democracy"
  authoritative_democracy_ideology_desc:0 ""
- national_authoritarianism:0 "National Authoritarian"
+ national_authoritarianism:0 "National Authoritarianism"
  national_authoritarianism_noun:0 "National Authoritarianism"
  national_authoritarianism_desc:0 "Totalitarian Regime"
- national_authoritarianism_drift:0 "Daily National Authoritarian support"
+ national_authoritarianism_drift:0 "Daily National Authoritarianism support"
  national_authoritarianism_acceptance:0 "Acceptance of National Authoritarian diplomacy"
  national_authoritarianism_ideology:0 "National Authoritarianism"
  national_authoritarianism_ideology_desc:0 ""
@@ -69,3 +69,9 @@
  maoism_ideology_desc:0 ""
  christian_democracy_ideology:0 "Christian Democracy"
  christian_democracy_ideology_desc:0 ""
+ conservative_liberalism_ideology:0 "Conservative Liberalism"
+ conservative_liberalism_ideology_desc:0 ""
+ authoritarian_conservatism_ideology:0 "Authoritarian Conservatism"
+ authoritarian_conservatism_ideology_desc:0 ""
+ francoism_ideology:0 "Francoism"
+ francoism_ideology_desc:0 "Francoism encompasses aspects of authoritarianism, nationalism, national Catholicism, monarchism, militarism and national conservatism; while being strongly anti-communist, anti-freemasonry, anti-Catalan, anti-liberal and pan-Hispanic."
