--- a/localisation/english/generic/geacps_parties_l_english.yml
+++ b/localisation/english/generic/geacps_parties_l_english.yml
@@ -167,3 +167,29 @@
  PARTY_social_democratic_party_of_germany_long:0 "Social Democratic Party of Germany"
  PARTY_socialist_unity_party_of_germany:0 "SED"
  PARTY_socialist_unity_party_of_germany_long:0 "Socialist Unity Party of Germany"
+ PARTY_colorado_party:0 "Colorado Party"
+ PARTY_colorado_party_long:0 "Colorado Party"
+ PARTY_conservative_coalition:0 "Conservative Coalition"
+ PARTY_conservative_coalition_long:0 "Conservative Coalition"
+ PARTY_national_democratic_front:0 "National Democratic Front"
+ PARTY_national_democratic_front_long:0 "National Democratic Front"
+ PARTY_national_liberation_front:0 "National Liberation Front"
+ PARTY_national_liberation_front_long:0 "National Liberation Front"
+ PARTY_national_union:0 "National Union"
+ PARTY_national_union_long:0 "National Union"
+ PARTY_revolutionary_union:0 "Revolutionary Union"
+ PARTY_revolutionary_union_long:0 "Revolutionary Union"
+ PARTY_revolutionary_workers_party:0 "Revolutionary Workers' Party"
+ PARTY_revolutionary_workers_party_long:0 "Revolutionary Workers' Party"
+ PARTY_association_for_service_to_the_new_philippines:0 "Kalibapi"
+ PARTY_association_for_service_to_the_new_philippines_long:0 "Association for Service to the New Philippines"
+ PARTY_communist_party_of_greece:0 "KKE"
+ PARTY_communist_party_of_greece_long:0 "Kommounistikó Kómma Elládas (Communist Party of Greece)"
+ PARTY_provisional_democratic_government:0 "PDK"
+ PARTY_provisional_democratic_government_long:0 "Prosoriní Dimokratikí Kyvérnisi (Provisional Democratic Government)"
+ PARTY_traditionalist_spanish_falange_and_the_juntas_of_national_syndicalist_offensive:0 "New Falange"
+ PARTY_traditionalist_spanish_falange_and_the_juntas_of_national_syndicalist_offensive_long:0 "Traditionalist Spanish Falange and the Juntas of National Syndicalist Offensive"
+ PARTY_los_leoparades:0 "Los Leoparades"
+ PARTY_los_leoparades_long:0 "Los Leoparades"
+ PARTY_american_popular_revolutionary_alliance:0 "APRA"
+ PARTY_american_popular_revolutionary_alliance_long:0 "American Popular Revolutionary Alliance"
