--- a/localisation/english/generic/geacps_political_tab_l_english.yml
+++ b/localisation/english/generic/geacps_political_tab_l_english.yml
@@ -16,16 +16,8 @@
  army_minister:0 "Army Minister"
  navy_minister:0 "Navy Minister"
  air_force_minister:0 "Airforce Minister"
- non_market_economics:0 "Non-market Economy"
- planned_economy:0 "Planned Economy"
  mixed_economy:0 "Mixed Economy"
- market_economy:0 "Market Economy"
- protectionism:0 "Protectionism"
  free_trade:0 "Free Trade"
- permanently_neutral:0 "Eternal Neutrality"
- all_volunteer_military_system:0 "Volunteer Only"
- levee_en_masse:0 "Universal Conscription"
- mobilizing_en_masse:0 "Total Mobilization"
  national_system:0 "Administration"
  political_system:0 "Political System"
  monarchy_city_state:0 "Monarchical City State"
@@ -35,7 +27,7 @@
  republic_unitary_state:0 "Unitary Republic"
  republic_federal_state:0 "Federal Republic"
  unitary_dependent_territory:0 "Unitary Dependent Territory"
- federal_dependent_territory:0 "Federal Dependent Territory"
+ federal_dependent_territory:0 "Federal Dependency"
  anarchy_territory:0 "Anarchy"
  parliamentary_cabinet_system:0 "Parliamentary System"
  presidential_system:0 "Presidential System"
@@ -49,3 +41,16 @@
  dependent_territory_indirect_rule_system:0 "Indirectly-ruled Dependent Territory"
  provisional_government:0 "Provisional Government"
  anarchy_state:0 "Anarchy"
+ nationally_planned_economy:0 "Nationally Planned Economy"
+ self_managed_economy:0 "Self Managed Economy"
+ market_intervention_economy:0 "Market Intervention Economy"
+ market_laissez_faire_economy:0 "Market Laissez Faire Economy"
+ self_reliant_economy:0 "Self Reliant Economy "
+ protective_trade:0 "Protective Trade"
+ controlled_trade:0 "Controlled Trade"
+ international_economy:0 "International Economy"
+ demilitarisation:0 "Demilitarisation"
+ disarmament:0 "Disarmament"
+ voluntary_military_service:0 "Voluntary Military Service"
+ partial_conscription:0 "Partial Conscription"
+ universal_conscription:0 "Universal Conscription"
