--- a/localisation/english/map/geacps_autonomy_system_l_english.yml
+++ b/localisation/english/map/geacps_autonomy_system_l_english.yml
@@ -9,7 +9,7 @@
  dominion:0 "Dominion"
  colony_and_protectorate:0 "Colony and Protectorate"
  protected_territory:0 "Protectorate"
- protected_state:0 "Protectorate"
+ protected_state:0 "Protected State"
  trust_territories:0 "Trust Territories"
  leased_territory:0 "Leased Territory"
  condominium:0 "Condominium"
@@ -24,8 +24,8 @@
  us_territory:0 "Territory"
  us_commonwealth:0 "Commonwealth"
  soviet_autonomous_republic:0 "Autonomous Republic"
- soviet_member_republic:0 "Republics of the Soviet Union"
- soviet_member_federal_republic:0 "Federal Republics of the Soviet Union"
+ soviet_member_republic:0 "Soviet Republic"
+ soviet_member_federal_republic:0 "Federal Soviet Republic"
  soviet_satellite:0 "Satellite"
  occupied_territory:0 "Occupied Territory"
  junior_partner_colony:0 "Junior Partner Colony"
