--- a/localisation/english/map/geacps_countries_colony_l_english.yml
+++ b/localisation/english/map/geacps_countries_colony_l_english.yml
@@ -70,7 +70,7 @@
  BHU_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  BHU_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
  BHU_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
- BHU_protected_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ BHU_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  BRM_dominion:0 "Dominion of $NONIDEOLOGY$"
  BRM_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  BRM_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
@@ -675,10 +675,10 @@
  DAH_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  DAH_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
  DAH_colony_DEF:0 "the $OVERLORDADJ$ Colony of $NONIDEOLOGY$"
- DAH_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
+ DAH_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  DAH_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  DAH_overseas_territory_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- DAH_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
+ DAH_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  DJI_dominion:0 "Dominion of Somaliland"
  DJI_dominion_DEF:0 "the Dominion of Somaliland"
  DJI_colony:0 "$OVERLORDADJ$ Colony of the Somali Coast"
@@ -785,10 +785,10 @@
  IVO_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  IVO_colony:0 "$OVERLORDADJ$ Colony of the $NONIDEOLOGY$"
  IVO_colony_DEF:0 "the $OVERLORDADJ$ Colony of $NONIDEOLOGY$"
- IVO_colony_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ IVO_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  IVO_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  IVO_overseas_territory_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- IVO_overseas_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ IVO_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  KEN_dominion:0 "Dominion of $NONIDEOLOGY$"
  KEN_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  KEN_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
@@ -1278,10 +1278,10 @@
  GUM_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  GUM_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
  GUM_colony_DEF:0 "the $OVERLORDADJ$ Colony of $NONIDEOLOGY$"
- GUM_colony_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ GUM_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  GUM_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  GUM_overseas_territory_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- GUM_overseas_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ GUM_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  GUM_imperial_member:0 "$OVERLORDADJ$ Ōmiyashima Tokubetsu Jichiku"
  GUM_imperial_member_DEF:0 "$OVERLORDADJ$ Ōmiyashima Tokubetsu Jichiku"
  GUM_imperial_member_ADJ:0 "$OVERLORDADJ$ Ōmiyashima"
@@ -1290,18 +1290,18 @@
  GUM_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$ Oomiyashima"
  GUM_us_commonwealth:0 "$OVERLORDADJ$ Commonwealth of $NONIDEOLOGY$"
  GUM_us_commonwealth_DEF:0 "the $OVERLORDADJ$ Commonwealth of $NONIDEOLOGY$"
- GUM_us_commonwealth_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ GUM_us_commonwealth_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  GUM_us_territory:0 "$OVERLORDADJ$ Territory of $NONIDEOLOGY$"
  GUM_us_territory_DEF:0 "the $OVERLORDADJ$ Territory of $NONIDEOLOGY$"
- GUM_us_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ GUM_us_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  HAW_dominion:0 "Dominion of $NONIDEOLOGY$"
  HAW_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  HAW_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
  HAW_colony_DEF:0 "the $OVERLORDADJ$ Colony of $NONIDEOLOGY$"
- HAW_colony_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ HAW_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  HAW_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  HAW_overseas_territory_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- HAW_overseas_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ HAW_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  HAW_imperial_member:0 "$OVERLORDADJ$ Hawai Ōkoku"
  HAW_imperial_member_DEF:0 "the $OVERLORDADJ$ Hawai Ōkoku"
  HAW_imperial_member_ADJ:0 "$OVERLORDADJ$ Hawai"
@@ -1310,10 +1310,10 @@
  HAW_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$ Hawai"
  HAW_us_commonwealth:0 "$OVERLORDADJ$ Commonwealth of $NONIDEOLOGY$"
  HAW_us_commonwealth_DEF:0 "the $OVERLORDADJ$ Commonwealth of $NONIDEOLOGY$"
- HAW_us_commonwealth_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ HAW_us_commonwealth_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  HAW_us_territory:0 "$OVERLORDADJ$ Territory of $NONIDEOLOGY$"
  HAW_us_territory_DEF:0 "the $OVERLORDADJ$ Territory of $NONIDEOLOGY$"
- HAW_us_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ HAW_us_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  NZL_dominion:0 "Dominion of $NONIDEOLOGY$"
  NZL_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  NZL_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
@@ -1332,16 +1332,16 @@
  SAM_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  SAM_colony:0 "$OVERLORDADJ$ Colony of $NONIDEOLOGY$"
  SAM_colony_DEF:0 "the $OVERLORDADJ$ Colony of $NONIDEOLOGY$"
- SAM_colony_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ SAM_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  SAM_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  SAM_overseas_territory_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- SAM_overseas_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ SAM_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  SAM_us_commonwealth:0 "$OVERLORDADJ$ Commonwealth of $NONIDEOLOGY$"
  SAM_us_commonwealth_DEF:0 "the $OVERLORDADJ$ Commonwealth of $NONIDEOLOGY$"
- SAM_us_commonwealth_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ SAM_us_commonwealth_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  SAM_us_territory:0 "$OVERLORDADJ$ Territory of $NONIDEOLOGY$"
  SAM_us_territory_DEF:0 "the $OVERLORDADJ$ Territory of $NONIDEOLOGY$"
- SAM_us_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ SAM_us_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  SOL_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
  SOL_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
  SOL_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
@@ -1372,10 +1372,10 @@
  ABK_soviet_soviet_autonomous_republic_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  BHR_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
  BHR_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
- BHR_protected_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ BHR_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  BRN_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
  BRN_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
- BRN_protected_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ BRN_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  BRN_imperial_member:0 "$OVERLORDADJ$ Bun'nei Ōkoku"
  BRN_imperial_member_DEF:0 "the $OVERLORDADJ$ Bun'nei Ōkoku"
  BRN_imperial_member_ADJ:0 "$OVERLORDADJ$ Bun'nei"
@@ -1437,12 +1437,12 @@
  EIN_dominion_DEF:0 "the $NONIDEOLOGY$ Federation"
  EIN_colony:0 "$OVERLORDADJ$ Colony of the $NONIDEOLOGY$"
  EIN_colony_DEF:0 "the $OVERLORDADJ$ Colony of the $NONIDEOLOGY$"
- EIN_colony_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ EIN_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
  EIN_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  EIN_overseas_territory_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- EIN_overseas_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
- EIN_imperial_member:0 "$OVERLORDADJ$ Higashi Indo Renpō"
- EIN_imperial_member_DEF:0 "the $OVERLORDADJ$ Higashi Indo Renpō"
+ EIN_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
+ EIN_imperial_member:0 "$OVERLORDADJ$ Higashi Indo Ōkoku"
+ EIN_imperial_member_DEF:0 "the $OVERLORDADJ$ Higashi Indo Ōkoku"
  EIN_imperial_member_ADJ:0 "$OVERLORDADJ$ Higashi Indo"
  EIN_imperial_overseas_territory:0 "$OVERLORDADJ$ Higashi Indo"
  EIN_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$ Higashi Indo"
@@ -1664,7 +1664,7 @@
  ALA_overseas_territory_ADJ:0 "$OVERLORDADJ$ Åland"
  AOS_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
  AOS_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
- AOS_protected_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ AOS_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  CRI_soviet_member_republic:0 "$NONIDEOLOGY$n $OVERLORDADJ$ Republic"
  CRI_soviet_member_republic_DEF:0 "the $OVERLORDADJ$ Republic of $NONIDEOLOGY$"
  CRI_total_socialism_soviet_member_republic:0 "$NONIDEOLOGY$n $OVERLORDADJ$ Socialist Republic"
@@ -1749,7 +1749,7 @@
  MNN_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  RHI_protected_territory:0 "$OVERLORDADJ$ Protectorate of the $NONIDEOLOGY$"
  RHI_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
- RHI_protected_territory_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ RHI_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  RUS_soviet_member_federal_republic:0 "$NONIDEOLOGY$n $OVERLORDADJ$ Federal Republic"
  RUS_soviet_member_federal_republic_DEF:0 "the $NONIDEOLOGY$n $OVERLORDADJ$ Federal Republic"
  RUS_total_socialism_soviet_member_federal_republic:0 "$NONIDEOLOGY$n $OVERLORDADJ$ Federal Socialist Republic"
@@ -2265,10 +2265,10 @@
  WIN_dominion_DEF:0 "the $NONIDEOLOGY$ Federation"
  WIN_colony:0 "$OVERLORDADJ$ Colony of the $NONIDEOLOGY$"
  WIN_colony_DEF:0 "the $OVERLORDADJ$ Colony of the $NONIDEOLOGY$"
- WIN_colony_ADJ:0 "$OVERLORDADJ$ $OVERLORDADJ$"
+ WIN_colony_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
  WIN_overseas_territory:0 "$OVERLORDADJ$ $NONIDEOLOGY$ Islands"
  WIN_overseas_territory_DEF:0 "$OVERLORDADJ$ $NONIDEOLOGY$ Islands"
- WIN_overseas_territory_ADJ:0 "$OVERLORDADJ$ NONIDEOLOGYADJ$"
+ WIN_overseas_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
  WIW_dominion:0 "Dominion of the $NONIDEOLOGY$ Islands"
  WIW_dominion_DEF:0 "the Dominion of the $NONIDEOLOGY$ Islands"
  WIW_colony:0 "$OVERLORDADJ$ Colony of the $NONIDEOLOGY$ Islands"
@@ -2673,15 +2673,6 @@
  VUT_condominium:0 "New Hebrides Condominium"
  VUT_condominium_DEF:0 "the New Hebrides Condominium"
  VUT_condominium_ADJ:0 "New Hebrides"
- ADEN_ENG_colony_and_protectorate:0 "$OVERLORDADJ$ Colony and Protectorate of Aden"
- ADEN_ENG_colony_and_protectorate_DEF:0 "the $OVERLORDADJ$ Colony and Protectorate of Aden"
- ADEN_ENG_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$ Aden"
- ADEN_GBRbyENG_colony_and_protectorate:0 "$OVERLORDADJ$ Colony and Protectorate of Aden"
- ADEN_GBRbyENG_colony_and_protectorate_DEF:0 "the $OVERLORDADJ$ Colony and Protectorate of Aden"
- ADEN_GBRbyENG_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$ Aden"
- ADEN_GBRandIREbyENG_colony_and_protectorate:0 "$OVERLORDADJ$ Colony and Protectorate of Aden"
- ADEN_GBRandIREbyENG_colony_and_protectorate_DEF:0 "the $OVERLORDADJ$ Colony and Protectorate of Aden"
- ADEN_GBRandIREbyENG_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$ Aden"
  STRAITS_GBRbyENG_colony:0 "$OVERLORDADJ$ Straits Settlements"
  STRAITS_GBRbyENG_colony_DEF:0 "the $OVERLORDADJ$ Straits Settlements"
  STRAITS_GBRbyENG_colony_ADJ:0 "$OVERLORDADJ$ Straits Settlements"
@@ -2738,3 +2729,32 @@
  WIW_colonies_federation:0 "$OVERLORDADJ$ Federation of $NONIDEOLOGY$ Islands"
  WIW_colonies_federation_DEF:0 "the $OVERLORDADJ$ Federation of $NONIDEOLOGY$ Islands"
  WIW_colonies_federation_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
+ GRE_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
+ GRE_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$"
+ GRE_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
+ GRE_junior_partner_protected_territory:0 "$OVERLORDADJ$ Protectorate of Kingdom of $NONIDEOLOGY$"
+ GRE_junior_partner_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of Kingdom of $NONIDEOLOGY$"
+ GRE_junior_partner_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
+ ADN_colony_and_protectorate:0 "$OVERLORDADJ$ Colony and Protectorate of $NONIDEOLOGY$"
+ ADN_colony_and_protectorate_DEF:0 "the $OVERLORDADJ$ Colony and Protectorate of $NONIDEOLOGY$"
+ ADN_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
+ AEG_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$ Islands"
+ AEG_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$ Islands"
+ AEG_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
+ AEG_condominium:0 "Condominium of $NONIDEOLOGY$"
+ AEG_condominium_DEF:0 "the Condominium of $NONIDEOLOGY$"
+ CRE_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$ Island"
+ CRE_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$ Island"
+ CRE_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Island"
+ ION_protected_territory:0 "$OVERLORDADJ$ Protectorate of $NONIDEOLOGY$ Islands"
+ ION_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of $NONIDEOLOGY$ Islands"
+ ION_protected_territory_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$ Islands"
+ AEGandION_ENG_protected_territory:0 "$OVERLORDADJ$ Protectorate of Aegean and Ionian Islands"
+ AEGandION_ENG_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of Aegean and Ionian Islands"
+ AEGandION_ENG_protected_territory_ADJ:0 "$OVERLORDADJ$ Aegean and Ionian"
+ AEGandION_GBRbyENG_protected_territory:0 "$OVERLORDADJ$ Protectorate of Aegean and Ionian Islands"
+ AEGandION_GBRbyENG_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of Aegean and Ionian Islands"
+ AEGandION_GBRbyENG_protected_territory_ADJ:0 "$OVERLORDADJ$ Aegean and Ionian"
+ AEGandION_GBRandIREbyENG_protected_territory:0 "$OVERLORDADJ$ Protectorate of Aegean and Ionian Islands"
+ AEGandION_GBRandIREbyENG_protected_territory_DEF:0 "the $OVERLORDADJ$ Protectorate of Aegean and Ionian Islands"
+ AEGandION_GBRandIREbyENG_protected_territory_ADJ:0 "$OVERLORDADJ$ Aegean and Ionian"
