--- a/localisation/english/map/geacps_countries_l_english.yml
+++ b/localisation/english/map/geacps_countries_l_english.yml
@@ -831,9 +831,9 @@
  SGR:0 "South Germany"
  SGR_DEF:0 "South Germany"
  SGR_ADJ:0 "South German"
- SLN:0 "Slavonia"
- SLN_DEF:0 "Slavonia"
- SLN_ADJ:0 "Slavonian"
+ SLA:0 "Slav"
+ SLA_DEF:0 "Slavs"
+ SLA_ADJ:0 "Slavic"
  SMR:0 "San Marino"
  SMR_DEF:0 "San Marino"
  SMR_ADJ:0 "Sammarinese"
@@ -954,9 +954,9 @@
  SHN:0 "Shan"
  SHN_DEF:0 "Shan"
  SHN_ADJ:0 "Shan"
- SKN:0 "Saint Christopher and Nevis"
- SKN_DEF:0 "Saint Christopher and Nevis"
- SKN_ADJ:0 "Saint Christopher and Nevisian"
+ SKN:0 "Saint Christopher"
+ SKN_DEF:0 "Saint Christopher"
+ SKN_ADJ:0 "Saint Christopher"
  SLC:0 "Saint Lucia"
  SLC_DEF:0 "Saint Lucia"
  SLC_ADJ:0 "Saint Lucian"
@@ -1522,9 +1522,9 @@
  WLC:0 "Wallachia"
  WLC_DEF:0 "Wallachia"
  WLC_ADJ:0 "Wallachian"
- ZPR:0 "Zaporozhzhia"
- ZPR_DEF:0 "Zaporozhzhia"
- ZPR_ADJ:0 "Zaporozhzhian"
+ ZAP:0 "Zapadoslavia"
+ ZAP_DEF:0 "Zapadoslavia"
+ ZAP_ADJ:0 "Zapadoslavian"
  CEU:0 "Ceuta"
  CEU_DEF:0 "Ceuta"
  CEU_ADJ:0 "Ceutan"
@@ -1655,3 +1655,120 @@
  PLY:0 "Polinesia"
  PLY_DEF:0 "Polinesia"
  PLY_ADJ:0 "Polinesian"
+ XIB:0 "Xibei"
+ XIB_DEF:0 "Xibei"
+ XIB_ADJ:0 "Xibei"
+ DVN:0 "Dravida Nad"
+ DVN_DEF:0 "Dravida Nad"
+ DVN_ADJ:0 "Dravidian"
+ FNG:0 "Fengtian"
+ FNG_DEF:0 "Fengtian"
+ FNG_ADJ:0 "Fengtian"
+ GOA:0 "Goa"
+ GOA_DEF:0 "Goa"
+ GOA_ADJ:0 "Goa"
+ HIL:0 "Ḥaʼil"
+ HIL_DEF:0 "Ḥaʼil"
+ HIL_ADJ:0 "Ḥaʼil"
+ INO:0 "Indian Ocean"
+ INO_DEF:0 "Indian Ocean"
+ INO_ADJ:0 "Indian Ocean"
+ KFT:0 "Krafuto"
+ KFT_DEF:0 "Krafuto"
+ KFT_ADJ:0 "Krafuto"
+ KHB:0 "Khabarovsk"
+ KHB_DEF:0 "Khabarovsk"
+ KHB_ADJ:0 "Khabarovsk"
+ MSC:0 "Muscat"
+ MSC_DEF:0 "Muscat"
+ MSC_ADJ:0 "Muscat"
+ NEJ:0 "Nejd"
+ NEJ_DEF:0 "Nejd"
+ NEJ_ADJ:0 "Nejd"
+ POD:0 "Pondicherry"
+ POD_DEF:0 "Pondicherry"
+ POD_ADJ:0 "Pondicherry"
+ TAI:0 "Tai"
+ TAI_DEF:0 "Tai"
+ TAI_ADJ:0 "Tai"
+ TIE:0 "Tientsin"
+ TIE_DEF:0 "Tientsin"
+ TIE_ADJ:0 "Tientsin"
+ TRK:0 "Turkestan"
+ TRK_DEF:0 "Turkestan"
+ TRK_ADJ:0 "Turkestani"
+ AEG:0 "Aegean"
+ AEG_DEF:0 "Aegean"
+ AEG_ADJ:0 "Aegean"
+ APN:0 "Alps"
+ APN_DEF:0 "Alps"
+ APN_ADJ:0 "Alps"
+ BRG:0 "Borgogne"
+ BRG_DEF:0 "Borgogne"
+ BRG_ADJ:0 "Bourgognon"
+ CRE:0 "Creta"
+ CRE_DEF:0 "Creta"
+ CRE_ADJ:0 "Cretan"
+ ION:0 "Ionian Islands"
+ ION_DEF:0 "Ionian Islands"
+ ION_ADJ:0 "Ionian Islands"
+ KRC:0 "Karachay"
+ KRC_DEF:0 "Karachay"
+ KRC_ADJ:0 "Kabardian"
+ MOS:0 "Moscow"
+ MOS_DEF:0 "Moscow"
+ MOS_ADJ:0 "Moscow"
+ MRD:0 "Mordovia"
+ MRD_DEF:0 "Mordovia"
+ MRD_ADJ:0 "Mordovian"
+ NRD:0 "Nordic"
+ NRD_DEF:0 "Nordic"
+ NRD_ADJ:0 "Nordic"
+ NRM:0 "Normandy"
+ NRM_DEF:0 "Normandy"
+ NRM_ADJ:0 "Normandy"
+ NTL:0 "Netherlands"
+ NTL_DEF:0 "Netherlands"
+ NTL_ADJ:0 "Dutch"
+ RTN:0 "Ruthenia"
+ RTN_DEF:0 "Ruthenia"
+ RTN_ADJ:0 "Ruthenian"
+ SDT:0 "Sudetenland"
+ SDT_DEF:0 "Sudetenland"
+ SDT_ADJ:0 "Sudetenland"
+ SLN:0 "Slavonia"
+ SLN_DEF:0 "Slavonia"
+ SLN_ADJ:0 "Slavonian"
+ URA:0 "Ural"
+ URA_DEF:0 "Ural"
+ URA_ADJ:0 "Ural"
+ VOS:0 "Vostoslavia"
+ VOS_DEF:0 "Vostoslavia"
+ VOS_ADJ:0 "Vostoslavian"
+ ZPR:0 "Zaporizhzhia "
+ ZPR_DEF:0 "Zaporizhzhia "
+ ZPR_ADJ:0 "Zaporizhzhia "
+ AFR:0 "Africa"
+ AFR_DEF:0 "Africa"
+ AFR_ADJ:0 "African"
+ AZA:0 "Azawad"
+ AZA_DEF:0 "Azawad"
+ AZA_ADJ:0 "Azawad"
+ BEN:0 "Benin"
+ BEN_DEF:0 "Benin"
+ BEN_ADJ:0 "Beninese"
+ BIA:0 "Biafra"
+ BIA_DEF:0 "Biafra"
+ BIA_ADJ:0 "Biafran"
+ NVS:0 "Nevis"
+ NVS_DEF:0 "Nevis"
+ NVS_ADJ:0 "Nevisian"
+ STM:0 "Saint Martin"
+ STM_DEF:0 "Saint Martin"
+ STM_ADJ:0 "Saint Martin"
+ KAM:0 "Kamchatka"
+ KAM_DEF:0 "Kamchatka"
+ KAM_ADJ:0 "Kamchatkan"
+ CHS:0 "Cherkessia"
+ CHS_DEF:0 "Cherkessia"
+ CHS_ADJ:0 "Cherkessian"
