--- a/localisation/english/map/geacps_countries_long_l_english.yml
+++ b/localisation/english/map/geacps_countries_long_l_english.yml
@@ -43,8 +43,6 @@
  GEO_republic_DEF:0 "the Republic of Georgia"
  GXC_republic:0 "Republic of Guangxi"
  GXC_republic_DEF:0 "the Republic of Guangxi"
- GXC_warlord:0 "Guangxi Clique"
- GXC_warlord_DEF:0 "the Guangxi Clique"
  IND_empire:0 "Indian Empire"
  IND_empire_DEF:0 "the Indian Empire"
  IND_republic:0 "Republic of India"
@@ -127,14 +125,8 @@
  QAT_state_DEF:0 "the State of Qatar"
  SAU_kingdom:0 "Kingdom of Saudi Arabia"
  SAU_kingdom_DEF:0 "the Kingdom of Saudi Arabia"
- SHX_warlord:0 "Shanxi Clique"
- SHX_warlord_DEF:0 "the Shanxi Clique"
  SIA_kingdom:0 "Kingdom of Siam"
  SIA_kingdom_DEF:0 "the Kingdom of Siam"
- SIK_warlord:0 "Sinkiang Clique"
- SIK_warlord_DEF:0 "the Sinkiang Clique"
- SIK_ma_warlord:0 "Sinkiang Ma Clique"
- SIK_ma_warlord_DEF:0 "the Sinkiang Ma Clique"
  SRL_republic:0 "Republic of Sri Lanka"
  SRL_republic_DEF:0 "the Republic of Sri Lanka"
  SRL_democratic_socialist_republic:0 "Democratic Socialist Republic of Sri Lanka"
@@ -171,8 +163,6 @@
  YEM_peoples_democratic_republic_DEF:0 "the Democratic People's Republic of Yemen"
  YEM_republic:0 "Republic of Yemen"
  YEM_republic_DEF:0 "the Republic of Yemen"
- YUN_warlord:0 "Yunnan Clique"
- YUN_warlord_DEF:0 "the Yunnan Clique"
  ALB_democratic_government:0 "Democratic Government of Albania"
  ALB_democratic_government_DEF:0 "the Democratic Government of Albania"
  ALB_kingdom:0 "Kingdom of Albania"
@@ -269,8 +259,8 @@
  GRE_kingdom_DEF:0 "the Kingdom of Greece"
  GRE_provisional_democratic_government:0 "Provisional Democratic Government of Greece"
  GRE_provisional_democratic_government_DEF:0 "the Provisional Democratic Government of Greece"
- GRE_republic:0 "Republic of Greece"
- GRE_republic_DEF:0 "the Republic of Greece"
+ GRE_republic:0 "Hellenic Republic"
+ GRE_republic_DEF:0 "the Hellenic Republic"
  GRE_state:0 "State of Greece"
  GRE_state_DEF:0 "the State of Greece"
  HAN_kingdom:0 "Kingdom of Hannover"
@@ -586,8 +576,6 @@
  TAH_kingdom_DEF:0 "the Kingdom of Tahiti"
  ABK_republic:0 "Republic of Abkhazia"
  ABK_republic_DEF:0 "the Republic of Abkhazia"
- ANH_warlord:0 "Anhui Clique"
- ANH_warlord_DEF:0 "the Anhui Clique"
  BAL_united_kingdom:0 "United Kingdom of Balochistan"
  BAL_united_kingdom_DEF:0 "the United Kingdom of Balochistan"
  BHR_kingdom:0 "Kingdom of Bahrain"
@@ -598,34 +586,10 @@
  CCS_republic_DEF:0 "the Republic of the Caucasus"
  ETR_republic:0 "Republic of East Turkestan"
  ETR_republic_DEF:0 "the Republic of East Turkestan"
- FUJ_warlord:0 "Fujian Clique"
- FUJ_warlord_DEF:0 "the Fujian Clique"
- GAN_warlord:0 "Gansu Clique"
- GAN_warlord_DEF:0 "the Gansu Clique"
- GAN_ma_warlord:0 "Gansu Ma Clique"
- GAN_ma_warlord_DEF:0 "the Gansu Ma Clique"
- GND_warlord:0 "Guangdong Clique"
- GND_warlord_DEF:0 "the Guangdong Clique"
- GZH_warlord:0 "Guizhou Clique"
- GZH_warlord_DEF:0 "the Guizhou Clique"
- HEB_warlord:0 "Hebei Clique"
- HEB_warlord_DEF:0 "the Hebei Clique"
- HEN_warlord:0 "Henan Clique"
- HEN_warlord_DEF:0 "the Henan Clique"
- HKG_warlord:0 "Hong Kong Clique"
- HKG_warlord_DEF:0 "the Hong Kong Clique"
- HNN_warlord:0 "Hunan Clique"
- HNN_warlord_DEF:0 "the Hunan Clique"
- HUB_warlord:0 "Hubei Clique"
- HUB_warlord_DEF:0 "the Hubei Clique"
  HYD_kingdom:0 "Kingdom of Hyderabad"
  HYD_kingdom_DEF:0 "the Kingdom of Hyderabad"
  INC_union:0 "Union of Indochina"
  INC_union_DEF:0 "the Union of Indochina"
- JIA_warlord:0 "Jiangxi Clique"
- JIA_warlord_DEF:0 "the Jiangxi Clique"
- JGS_warlord:0 "Jiangsu Clique"
- JGS_warlord_DEF:0 "the Jiangsu Clique"
  JOH_sultanate:0 "Sultanate of Johor"
  JOH_sultanate_DEF:0 "the Sultanate of Johor"
  KAS_kingdom:0 "Kingdom of Kashmir"
@@ -636,48 +600,24 @@
  KEL_sultanate_DEF:0 "the Sultanate of Kelantan"
  KUM_khanate:0 "Kumul Khanate"
  KUM_khanate_DEF:0 "the Kumul Khanate"
- MCA_warlord:0 "Macao Clique"
- MCA_warlord_DEF:0 "the Macao Clique"
  MYS_kingdom:0 "Kingdom of Mysore"
  MYS_kingdom_DEF:0 "the Kingdom of Mysore"
- NAN_warlord:0 "Nanjing Clique"
- NAN_warlord_DEF:0 "the Nanjing Clique"
- NIG_warlord:0 "Ningxia Clique"
- NIG_warlord_DEF:0 "the Ningxia Clique"
- NIG_ma_warlord:0 "Ningxia Ma Clique"
- NIG_ma_warlord_DEF:0 "the Ningxia Ma Clique"
  OTT_sublime_state:0 "Sublime Ottoman State"
  OTT_sublime_state_DEF:0 "the Sublime Ottoman State"
  PRL_sultanate:0 "Sultanate of Perlis"
  PRL_sultanate_DEF:0 "the Sultanate of Perlis"
  PUD_kingdom:0 "Kingdom of Pudukkottai"
  PUD_kingdom_DEF:0 "the Kingdom of Pudukkottai"
- QAH_warlord:0 "Chahar Clique"
- QAH_warlord_DEF:0 "the Chahar Clique"
- QIG_warlord:0 "Qinghai Clique"
- QIG_warlord_DEF:0 "the Qinghai Clique"
- QIG_ma_warlord:0 "Qinghai Ma Clique"
- QIG_ma_warlord_DEF:0 "the Qinghai Ma Clique"
  SAB_republic:0 "Republic of Saba"
  SAB_republic_DEF:0 "the Republic of Saba"
- SCH_warlord:0 "Sichuan Clique"
- SCH_warlord_DEF:0 "the Sichuan Clique"
  SGH_great_way_municipal_government:0 "Great Way Municipal Government of Shanghai"
  SGH_great_way_municipal_government_DEF:0 "the Great Way Municipal Government of Shanghai"
- SGH_warlord:0 "Shanghai Clique"
- SGH_warlord_DEF:0 "the Shanghai Clique"
- SHA_warlord:0 "Shaanxi Clique"
- SHA_warlord_DEF:0 "the Shaanxi Clique"
- SHD_warlord:0 "Shandong Clique"
- SHD_warlord_DEF:0 "the Shandong Clique"
  SIN_republic:0 "Republic of Singapore"
  SIN_republic_DEF:0 "the Republic of Singapore"
  SKM_kingdom:0 "Kingdom of Sikkim"
  SKM_kingdom_DEF:0 "the Kingdom of Sikkim"
  SRW_raj:0 "Raj of Sarawak"
  SRW_raj_DEF:0 "the Raj of Sarawak"
- SUY_warlord:0 "Suiyuan Clique"
- SUY_warlord_DEF:0 "the Suiyuan Clique"
  SYE_republic:0 "Republic of South Yemen"
  SYE_republic_DEF:0 "the Republic of South Yemen"
  TER_sultanate:0 "Sultanate of Terengganu"
@@ -690,16 +630,8 @@
  TRV_kingdom_DEF:0 "the Kingdom of Travancore"
  TWN_state:0 "State of Taiwan"
  TWN_state_DEF:0 "the State of Taiwan"
- TWN_warlord:0 "Taiwan Clique"
- TWN_warlord_DEF:0 "the Taiwan Clique"
  WTR_republic:0 "Republic of West Turkestan"
  WTR_republic_DEF:0 "the Republic of West Turkestan"
- XIK_warlord:0 "Xikang Clique"
- XIK_warlord_DEF:0 "the Xikang Clique"
- ZHI_warlord:0 "Zhili Clique"
- ZHI_warlord_DEF:0 "the Zhili Clique"
- ZHE_warlord:0 "Zhejiang Clique"
- ZHE_warlord_DEF:0 "the Zhejiang Clique"
  ADR_co-principality:0 "Co-Principality of Andorra"
  ADR_co-principality_DEF:0 "the Co-Principality of Andorra"
  ADR_principality:0 "Principality of Andorra"
@@ -750,8 +682,8 @@
  SIC_kingdom_DEF:0 "the Kingdom of Sicilia"
  SGR_confederation:0 "Sourh German Confederation"
  SGR_confederation_DEF:0 "the South German Confederation"
- SLN_kingdom:0 "Kingdom of Slavonia"
- SLN_kingdom_DEF:0 "the Kingdom of Slavonia"
+ SLA_kingdom:0 "Slavic Kingdom"
+ SLA_kingdom_DEF:0 "the Slavic Kingdom"
  SMR_most_serene_republic:0 "Most Serene Republic of San Marino"
  SMR_most_serene_republic_DEF:0 "the Most Serene Republic of San Marino"
  SRD_kingdom:0 "Kingdom of Sardinia"
@@ -840,8 +772,8 @@
  SBL_republic_DEF:0 "the Republic of Saint Barthélemy"
  SHN_republic:0 "Shan Republic"
  SHN_republic_DEF:0 "the Shan Republic"
- SKN_federation:0 "Federation of Saint Barthélemy"
- SKN_federation_DEF:0 "the Federation of Saint Barthélemy"
+ SKN_federation:0 "Federation of Saint Christopher"
+ SKN_federation_DEF:0 "the Federation of Saint Christopher"
  SLC_republic:0 "Republic of Saint Lucia"
  SLC_republic_DEF:0 "the Republic of Saint Lucia"
  SPM_republic:0 "Republic of Saint Pierre and Miquelon"
@@ -946,16 +878,12 @@
  MAL_union_DEF:0 "the Malayan Union"
  MAN_soviet_government:0 "Soviet Government of Manchuria"
  MAN_soviet_government_DEF:0 "the Soviet Government of Manchuria"
- MAN_warlord:0 "Manchu Clique"
- MAN_warlord_DEF:0 "the Manchu Clique"
  MEN_military_government:0 "Menggu Military Junta"
  MEN_military_government_DEF:0 "the Menggu Military Junta"
  MEN_soviet_government:0 "Soviet Government of Menggu"
  MEN_soviet_government_DEF:0 "the Soviet Government of Menggu"
  MEN_united_autonomous_government:0 "Mongol United Autonomous Government"
  MEN_united_autonomous_government_DEF:0 "the Mongol United Autonomous Government"
- MEN_warlord:0 "Menggu Clique"
- MEN_warlord_DEF:0 "the Menggu Clique"
  PER_imperial_state:0 "Imperial State of Persia"
  PER_imperial_state_DEF:0 "the Imperial State of Persia"
  SHX_minguo:0 "Republic of Shanxi"
@@ -1142,8 +1070,6 @@
  BHR_state_DEF:0 "the State of Bahrain"
  DLI_soviet_government:0 "Soviet Government of Dalian"
  DLI_soviet_government_DEF:0 "the Soviet Government of Dalian"
- DLI_warlord:0 "Dalian Clique"
- DLI_warlord_DEF:0 "the Dalian Clique"
  EIN_federation:0 "East Indies Federation"
  EIN_federation_DEF:0 "the East Indies Federation"
  EIN_republic:0 "Republic of the East Indies"
@@ -1194,8 +1120,6 @@
  HIN_republic_DEF:0 "the Republic of Hainan"
  HIN_soviet_government:0 "Soviet Government of Hainan"
  HIN_soviet_government_DEF:0 "the Soviet Government of Hainan"
- HIN_warlord:0 "Hainan Clique"
- HIN_warlord_DEF:0 "the Hainan Clique"
  HKG_soviet_government:0 "Soviet Government of Hong Kong"
  HKG_soviet_government_DEF:0 "the Soviet Government of Hong Kong"
  HNN_minguo:0 "Republic of Hunan"
@@ -1262,8 +1186,6 @@
  QIN_republic_DEF:0 "the Republic of Qingdao"
  QIN_soviet_government:0 "Soviet Government of Qingdao"
  QIN_soviet_government_DEF:0 "the Soviet Government of Qingdao"
- QIN_warlord:0 "Qingdao Clique"
- QIN_warlord_DEF:0 "the Qingdao Clique"
  RYU_kingdom:0 "Kingdom of Ryukyu"
  RYU_kingdom_DEF:0 "the Kingdom of Ryukyu"
  RYU_minguo:0 "Republic of Ryukyu"
@@ -1322,8 +1244,6 @@
  XIZ_republic_DEF:0 "the Republic of Xizang"
  XIZ_soviet_government:0 "Xizang Soviet"
  XIZ_soviet_government_DEF:0 "the Xizang Soviet"
- XIZ_warlord:0 "Xizang Clique"
- XIZ_warlord_DEF:0 "the Xizang Clique"
  ZHI_minguo:0 "Zhili Republic"
  ZHI_minguo_DEF:0 "the Zhili Republic"
  ZHI_republic:0 "Zhili Republic"
@@ -1889,10 +1809,6 @@
  VIE_free_city_DEF:0 "the Free City of Wien"
  WLC_principality:0 "Principality of Wallachia"
  WLC_principality_DEF:0 "the Principality of Wallachia"
- ZPR_cossack_republic:0 "Cossack Republic of Zaporozhzhia"
- ZPR_cossack_republic_DEF:0 "the Cossack Republic of Zaporozhzhia"
- ZPR_republic:0 "Republic of Zaporozhzhia"
- ZPR_republic_DEF:0 "the Republic of Zaporozhzhia"
  AMB_republic:0 "Republic of Ambazonia"
  AMB_republic_DEF:0 "the Republic of Ambazonia"
  CEU_free_city:0 "Free City of Ceuta"
@@ -2015,3 +1931,179 @@
  TOB_republic_DEF:0 "the Republic of Tobago"
  PLY_confederation:0 "Confederation of Polynesia"
  PLY_confederation_DEF:0 "the Confederation of Polynesia"
+ GRE_kingdom_government:0 "Royal Government of Greece"
+ GRE_kingdom_government_DEF:0 "the Royal Government of Greece"
+ DVN_republic:0 "Republic of Dravida Nad"
+ DVN_republic_DEF:0 "the Republic of Dravida Nad"
+ FNG_free_city:0 "Free City of Fengtian"
+ FNG_free_city_DEF:0 "the Free City of Fengtian"
+ FNG_soviet_government:0 "Soviet Government of Fengtian"
+ FNG_soviet_government_DEF:0 "the Soviet Government of Fengtian"
+ GOA_free_city:0 "Free City of Goa"
+ GOA_free_city_DEF:0 "the Free City of Goa"
+ HIL_emirate:0 "Emirate of Haʾil"
+ HIL_emirate_DEF:0 "the Emirate of Haʾil"
+ INO_federation:0 "Federation of Indian Ocean"
+ INO_federation_DEF:0 "the Federation of Indian Ocean"
+ KFT_republic:0 "Republic of Karafuto"
+ KFT_republic_DEF:0 "the Republic of Karafuto"
+ KHB_republic:0 "Khabarovsk Republic"
+ KHB_republic_DEF:0 "the Khabarovsk Republic"
+ NEJ_kingdom:0 "Kingdom of Nejd"
+ NEJ_kingdom_DEF:0 "the Kingdom of Nejd"
+ NEJ_sultanate:0 "Sultanate of Nejd"
+ NEJ_sultanate_DEF:0 "the Sultanate of Nejd"
+ POD_free_city:0 "Free City of Pondicherry"
+ POD_free_city_DEF:0 "the Free City of Pondicherry"
+ TAI_federation:0 "Tai Federation"
+ TAI_federation_DEF:0 "the Tai Federation"
+ TIE_free_city:0 "Free City of Tientsin"
+ TIE_free_city_DEF:0 "the Free City of Tientsin"
+ TIE_soviet_government:0 "Soviet Government of Tientsin"
+ TIE_soviet_government_DEF:0 "the Soviet Government of Tientsin"
+ TRK_federation:0 "Turkestan Federation"
+ TRK_federation_DEF:0 "the Turkestan Federation"
+ AEG_federation:0 "Aegean Federation"
+ AEG_federation_DEF:0 "the Aegean Federation"
+ APN_confederation:0 "Alpine Confederation"
+ APN_confederation_DEF:0 "the Alpine Confederation"
+ BRG_duchy:0 "Duchy of Bourgogne"
+ BRG_duchy_DEF:0 "the Duchy of Bourgogne"
+ CRE_state:0 "Cretan State"
+ CRE_state_DEF:0 "the Cretan State"
+ ION_republic:0 "Republic of the Ionian Islands"
+ ION_republic_DEF:0 "the Republic of the Ionian Islands"
+ KRC_republic:0 "Karachay Republic"
+ KRC_republic_DEF:0 "the Karachay Republic"
+ MOS_free_city:0 "Free City of Moscow"
+ MOS_free_city_DEF:0 "the Free City of Moscow"
+ MOS_grand_duchy:0 "Grand Duchy of Moscow"
+ MOS_grand_duchy_DEF:0 "the Grand Duchy of Moscow"
+ MRD_republic:0 "Republic of Mordovia"
+ MRD_republic_DEF:0 "the Republic of Mordovia"
+ NRD_united_kingdom:0 "Nordic United Kingdom"
+ NRD_united_kingdom_DEF:0 "the Nordic United Kingdom"
+ NRM_duchy:0 "Duchy of Normandy"
+ NRM_duchy_DEF:0 "the Duchy of Normandy"
+ NTL_kingdom:0 "Kingdom of the Netherlands"
+ NTL_kingdom_DEF:0 "the Kingdom of the Netherlands"
+ NTL_republic:0 "Republic of the Netherlands"
+ NTL_republic_DEF:0 "the Republic of the Netherlands"
+ NTL_united_kingdom:0 "United Kingdom of the Netherlands"
+ NTL_united_kingdom_DEF:0 "the United Kingdom of the Netherlands"
+ RTN_grand_principality:0 "Grand Principality of Ruthenia"
+ RTN_grand_principality_DEF:0 "the Grand Principality of Ruthenia"
+ SDT_republic:0 "Republic of Sudetenland"
+ SDT_republic_DEF:0 "the Republic of Sudetenland"
+ SLA_federation:0 "Slavic Federation"
+ SLA_federation_DEF:0 "the Slavic Federation"
+ URA_republic:0 "Republic of Ural"
+ URA_republic_DEF:0 "the Republic of Ural"
+ VOS_federation:0 "Federation of Vostoslavia"
+ VOS_federation_DEF:0 "the Federation of Vostoslavia"
+ ZAP_federation:0 "Federation of Zapadoslavia"
+ ZAP_federation_DEF:0 "the Federation of Zapadoslavia"
+ AFR_union:0 "Union of Africa"
+ AFR_union_DEF:0 "the Union of Africa"
+ AZA_state:0 "State of Azawad"
+ AZA_state_DEF:0 "the State of Azawad"
+ BEN_republic:0 "Republic of Benin"
+ BEN_republic_DEF:0 "the Republic of Benin"
+ BIA_republic:0 "Republic of Biafra"
+ BIA_republic_DEF:0 "the Republic of Biafra"
+ NVS_republic:0 "Republic of Nevis"
+ NVS_republic_DEF:0 "the Republic of Nevis"
+ STM_union:0 "Union of Saint Martin"
+ STM_union_DEF:0 "the Union of Saint Martin"
+ GXC_military_clique:0 "Guangxi Clique"
+ GXC_military_clique_DEF:0 "the Guangxi Clique"
+ MAN_military_clique:0 "Manchurian Clique"
+ MAN_military_clique_DEF:0 "the Manchurian Clique"
+ MEN_military_clique:0 "Menggu Clique"
+ MEN_military_clique_DEF:0 "the Menggu Clique"
+ SHA_military_clique:0 "Shaanxi Clique"
+ SHA_military_clique_DEF:0 "the Shaanxi Clique"
+ SHX_military_clique:0 "Shanxi Clique"
+ SHX_military_clique_DEF:0 "the Shanxi Clique"
+ SIK_ma_military_clique:0 "Sinkiang Ma Clique"
+ SIK_ma_military_clique_DEF:0 "the Sinkiang Ma Clique"
+ SIK_military_clique:0 "Sinkiang Clique"
+ SIK_military_clique_DEF:0 "the Sinkiang Clique"
+ YUN_military_clique:0 "Yunnan Clique"
+ YUN_military_clique_DEF:0 "the Yunnan Clique"
+ ANH_military_clique:0 "Anhui Clique"
+ ANH_military_clique_DEF:0 "the Anhui Clique"
+ DLI_military_clique:0 "Dalian Clique"
+ DLI_military_clique_DEF:0 "the Dalian Clique"
+ FNG_military_clique:0 "Fengtian Clique"
+ FNG_military_clique_DEF:0 "the Fengtian Clique"
+ FUJ_military_clique:0 "Fujian Clique"
+ FUJ_military_clique_DEF:0 "the Fujian Clique"
+ GAN_ma_military_clique:0 "Gansu Ma Clique"
+ GAN_ma_military_clique_DEF:0 "the Gansu Ma Clique"
+ GAN_military_clique:0 "Gansu Clique"
+ GAN_military_clique_DEF:0 "the Gansu Clique"
+ GND_military_clique:0 "Guangdong Clique"
+ GND_military_clique_DEF:0 "the Guangdong Clique"
+ GZH_military_clique:0 "Guizhou Clique"
+ GZH_military_clique_DEF:0 "the Guizhou Clique"
+ HEB_military_clique:0 "Hebei Clique"
+ HEB_military_clique_DEF:0 "the Hebei Clique"
+ HEN_military_clique:0 "Henan Clique"
+ HEN_military_clique_DEF:0 "the Henan Clique"
+ HIN_military_clique:0 "Hainan Clique"
+ HIN_military_clique_DEF:0 "the Hainan Clique"
+ HKG_military_clique:0 "Hong Kong Clique"
+ HKG_military_clique_DEF:0 "the Hong Kong Clique"
+ HNN_military_clique:0 "Hunan Clique"
+ HNN_military_clique_DEF:0 "the Hunan Clique"
+ HUB_military_clique:0 "Hubei Clique"
+ HUB_military_clique_DEF:0 "the Hubei Clique"
+ JGS_military_clique:0 "Jiangsu Clique"
+ JGS_military_clique_DEF:0 "the Jiangsu Clique"
+ JIA_military_clique:0 "Jiangxi Clique"
+ JIA_military_clique_DEF:0 "the Jiangxi Clique"
+ KAM_republic:0 "Kamchatka Republic"
+ KAM_republic_DEF:0 "the Kamchatka Republic"
+ MCA_military_clique:0 "Macao Clique"
+ MCA_military_clique_DEF:0 "the Macao Clique"
+ NAN_military_clique:0 "Nanjing Clique"
+ NAN_military_clique_DEF:0 "the Nanjing Clique"
+ NIG_ma_military_clique:0 "Ningxia Ma Clique"
+ NIG_ma_military_clique_DEF:0 "the Ningxia Ma Clique"
+ NIG_military_clique:0 "Ningxia Clique"
+ NIG_military_clique_DEF:0 "the Ningxia Clique"
+ QAH_military_clique:0 "Chahar Clique"
+ QAH_military_clique_DEF:0 "the Chahar Clique"
+ QIG_ma_military_clique:0 "Qinghai Ma Clique"
+ QIG_ma_military_clique_DEF:0 "the Qinghai Ma Clique"
+ QIG_military_clique:0 "Qinghai Clique"
+ QIG_military_clique_DEF:0 "the Qinghai Clique"
+ QIN_military_clique:0 "Qingdao Clique"
+ QIN_military_clique_DEF:0 "the Qingdao Clique"
+ SCH_military_clique:0 "Sichuan Clique"
+ SCH_military_clique_DEF:0 "the Sichuan Clique"
+ SGH_military_clique:0 "Shanghai Clique"
+ SGH_military_clique_DEF:0 "the Shanghai Clique"
+ SHD_military_clique:0 "Shandong Clique"
+ SHD_military_clique_DEF:0 "the Shandong Clique"
+ SUY_military_clique:0 "Suiyuan Clique"
+ SUY_military_clique_DEF:0 "the Suiyuan Clique"
+ TIE_military_clique:0 "Tientsin Clique"
+ TIE_military_clique_DEF:0 "the Tientsin Clique"
+ TWN_military_clique:0 "Taiwan Clique"
+ TWN_military_clique_DEF:0 "the Taiwan Clique"
+ XIK_military_clique:0 "Xikang Clique"
+ XIK_military_clique_DEF:0 "the Xikang Clique"
+ XIZ_military_clique:0 "Xizang Clique"
+ XIZ_military_clique_DEF:0 "the Xizang Clique"
+ ZHE_military_clique:0 "Zhejiang Clique"
+ ZHE_military_clique_DEF:0 "the Zhejiang Clique"
+ ZHI_military_clique:0 "Zhili Clique"
+ ZHI_military_clique_DEF:0 "the Zhili Clique"
+ CHS_republic:0 "Cherkessian Republic"
+ CHS_republic_DEF:0 "the Cherkessian Republic"
+ ZPR_cossack_republic:0 "Cossack Republic of Zaporizhzhia"
+ ZPR_cossack_republic_DEF:0 "the Cossack Republic of Zaporizhzhia"
+ ZPR_republic:0 "Republic of Zaporizhzhia"
+ ZPR_republic_DEF:0 "the Republic of Zaporizhzhia"
