--- a/localisation/english/map/geacps_factions_l_english.yml
+++ b/localisation/english/map/geacps_factions_l_english.yml
@@ -6,17 +6,5 @@
  ANTI-JAPANESE_NATIONAL_UNITED_FRONT:0 "Anti-Japanese National United Front"
  CHINESE_PEOPLE'S_FRONT:0 "Chinese People's Front"
  MONROE_LEAGUE:0 "Monroe League"
- faction.0.t:0 "Faction Invitation"
- faction.0.d:0 "The [FROM.GetAdjective] have invited our nation to join the [FROM.GetFactionName]."
- faction.0.0:0 "Petition to join!"
- faction.0.1:0 "Let's decline..."
- faction.1.t:0 "Join Faction Request"
- faction.1.d:0 "The [FROM.GetAdjective] have requested to join the [ROOT.GetFactionName]."
- faction.1.0:0 "The more, the merrier"
- faction.1.1:0 "Is it really in our interest?"
- faction.2.t:0 "The [FROM.GetAdjective] Accept"
- faction.2.d:0 "The [FROM.GetAdjective] have accepted our request."
- faction.2.0:0 "Excellent."
- faction.3.t:0 "The [FROM.GetAdjective] Decline"
- faction.3.d:0 "The [FROM.GetAdjective] have declined our request."
- faction.3.0:0 "Unbelievable..."
+ ANDEAN_COMMUNITY:0 "Andean Community"
+ NUEVA_ANDALUCA:0 "Nueva Andalusia"
