--- a/localisation/english/map/geacps_state_names_l_english.yml
+++ b/localisation/english/map/geacps_state_names_l_english.yml
@@ -33,8 +33,8 @@
  STATE_32:0 "Rhone-Alpes"
  STATE_33:0 "Cher"
  STATE_34:0 "Wallonia"
- STATE_35:0 "Southern Holland"
- STATE_36:0 "Northern Holland"
+ STATE_35:0 "Gelderland"
+ STATE_36:0 "Friesland"
  STATE_37:0 "Sjaelland"
  STATE_38:0 "Norrland"
  STATE_39:0 "High Adige-South Tirol"
@@ -1126,8 +1126,8 @@
  STATE_1130:0 "Mounlapamok"
  STATE_1131:0 "Southern Dalmatia"
  STATE_1132:0 "Central Slavonia"
- STATE_1133:0 "Southern Holland"
- STATE_1134:0 "Eastern Holland"
+ STATE_1133:0 "Seeland"
+ STATE_1134:0 "Utrecht"
  STATE_1135:0 "Nancy"
  STATE_1136:0 "Guantanamo Bay"
  STATE_1137:0 "Nangarhar"
@@ -1473,3 +1473,12 @@
  STATE_1472:0 "Holingol"
  STATE_1473:0 "Ulanhad"
  STATE_1474:0 "Kazak Altai"
+ STATE_1475:0 "Groningen"
+ STATE_1476:0 "Drenthe"
+ STATE_1477:0 "Overijssel"
+ STATE_1478:0 "North Brabant"
+ STATE_1479:0 "Northern Limburg"
+ STATE_1480:0 "Corfu"
+ STATE_1481:0 "Cerigo"
+ STATE_1482:0 "South Bucovina"
+ STATE_1483:0 "Adygea"
