--- a/localisation/english/replace/geacps_loading_tips_l_english.yml
+++ b/localisation/english/replace/geacps_loading_tips_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- LOADING_TIP_0:0 "「大東亜が日本の生存圏」\n- 松岡　洋右"
+ LOADING_TIP_0:0 "\"Greater East Asia is Japan's Lebensraum\"\n- Yōsuke Matsuoka"
  LOADING_TIP_1:0 "East Asians should have the same rights as any other race, that skin color is something to be rather proud of.\n- Hideki Tojo"
  LOADING_TIP_2:0 "A person won't move unless you show them how, tell them to, have them do it, and then praise them.\n- Isoroku Yamamoto"
- LOADING_TIP_3:0 "栗林忠道中将は、アメリカ人が戦争で直面した最も手ごわい敵の一人であった。\n- ジョセフ・H・アレクサンダー"
- LOADING_TIP_4:0 "然しながら、2年3年となれば全く確信は持てぬ。\n- 山本 五十六"
+ LOADING_TIP_3:0 "Lieutenant General Tadamichi Kuribayashi was one of the most formidable opponents the Americans faced during the war.\n- Joseph H. Alexander"
+ LOADING_TIP_4:0 "However, I'm not sure whether it'll take two or three years.\n- Isoroku Yamamoto"
  LOADING_TIP_5:0 "If I hadn't joined the Navy, I would've been a master of the Koto by now.\n- Shigeyoshi Inoue"
- LOADING_TIP_6:0 "この救出に勝利が含まれている。\n- ウィンストン・チャーチル"
- LOADING_TIP_7:0 "アメリカ人は他のすべてのあらゆる可能性を試した後に、常に正しいことをすると期待できる。\n- ウィンストン・チャーチル"
+ LOADING_TIP_6:0 "This rescue is included in our victory.\n- Winston Churchill "
+ LOADING_TIP_7:0 "Americans can always be expected to do the right thing, after trying all other possibilities.\n- Winston Churchill"
  LOADING_TIP_8:0 "The Imperial Navy is a luxurious thing.\n- Masanobu Tsuji"
  LOADING_TIP_9:0 "As army educators go, I'm probably the only one who served as Principal at the Toyama, Yokashikan, and Shikan military academies. I was really happy then.\n- Mitsuru Ushijima"
  LOADING_TIP_10: "What did you say? The end? What about the world? What about the colonies?\n- Charles De Gaulle"
@@ -15,7 +15,7 @@
  LOADING_TIP_13: "The operation was 90% successful.\n- Bernard Montgomery"
  LOADING_TIP_14: "No, please call me General Marshall, sir.\n- George Marshall"
  LOADING_TIP_15: "Be graceful in your demeanor, and strong in your actions.\n- Dwight D. Eisenhower"
- LOADING_TIP_16: "真珠湾を忘れるな！\n- 『讀賣報知』"
+ LOADING_TIP_16: "Remember Pearl Harbor!\n- \"Propaganda poster\""
  LOADING_TIP_17: "Be fearless!\n- George S. Patton"
  LOADING_TIP_18: "I shall return.\n- Douglas Macarthur"
  LOADING_TIP_19: "Gentlemen, first of all I want to make it clear to each of you that I'm in not worried in the slightest.\n- Raymond Spruance"
@@ -78,7 +78,7 @@
  LOADING_TIP_76: "War is as if all of humanity were against all of humanity.\n- \"Leviathan\""
  LOADING_TIP_77: "We too shall fight harder than ever against the supremacy of you Americans.\n- Kantaro Suzuki"
  LOADING_TIP_78: "Destroy Anglo-American Pacifism.\n- Fumimaro Konoe"
- LOADING_TIP_79: "目の前の小さな現象に目を奪われて、遠い目標を見失ってはならない。\n- 東久邇 宮稔彦王"
+ LOADING_TIP_79: "Don't lose sight of distant goals by being distracted by small events in front of you.\n- Prince Naruhiko Higashikuni"
  LOADING_TIP_80: "As you can see, out of all the Governors of Korea, I'm probably the ugliest.\n- Kuniaki Koiso"
  LOADING_TIP_81: "Belgium isn't a road. It's a country!\n- The Soldier King"
  LOADING_TIP_82: "Akashi Motojiro alone has achieved more than the 200,000 troops stationed in Manchuria.\n- Wilhelm II"
