--- a/localisation/english/replace/other_mod_l_english.yml
+++ b/localisation/english/replace/other_mod_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
- nuke_attacked_state_modifier:0 "放射能汚染地帯"
- parliament_gui_decision_category:0 "議会GUIの例§!"
- parliament_gui_decision_category_desc:0 "仮テキスト\n仮テキスト\n仮テキスト"
+ nuke_attacked_state_modifier:0 "Radioactive Area"
+ parliament_gui_decision_category:0 ""
+ parliament_gui_decision_category_desc:0 ""
  category_cv:0 "Carrier-based Aircraft"
  interwar_antiair:0 "AntiAir"
  NAVAL_TITLE_LIGHT_CARRIERS:0 "LIGHT CARRIERS"
@@ -21,35 +21,35 @@
  jet_strat_bomber_equipment:0 "Jet Strategic Bomber"
  plane_attacker_upgrade:0 "Armament"
  plane_attacker_upgrade_desc:0 "Bigger bomb bay to deliver more payload."
- JAP_medium_tank_destroyer_equipment_1:0 "一式砲戦車 ホニI"
- JAP_medium_tank_destroyer_equipment_1_short:0 "ホニI"
- JAP_medium_tank_destroyer_equipment_2:0 "三式砲戦車 ホニIII"
- JAP_medium_tank_destroyer_equipment_2_short:0 "ホニIII"
- JAP_medium_tank_destroyer_equipment_3:0 "試製七糎半対戦車自走砲 ナト"
- JAP_medium_tank_destroyer_equipment_3_short:0 "ナト"
- JAP_medium_tank_artillery_equipment_1:0 "二式砲戦車 ホイ"
- JAP_medium_tank_artillery_equipment_1_short:0 "ホイ"
- JAP_medium_tank_artillery_equipment_2:0 "四式十五糎自走砲 ホロ"
- JAP_medium_tank_artillery_equipment_2_short:0 "ホロ"
- JAP_medium_tank_artillery_equipment_3:0 "試製四式重迫撃砲 ハト"
- JAP_medium_tank_artillery_equipment_3_short:0 "ハト"
- JAP_light_tank_artillery_equipment_3:0 "試製七糎半自走砲 クセ"
- JAP_light_tank_artillery_equipment_3_short:0 "クセ"
- JAP_light_tank_destroyer_equipment_3:0 "試製五式四十七粍自走砲 ホル"
- JAP_light_tank_destroyer_equipment_3_short:0 "ホル"
- JAP_heavy_tank_artillery_equipment_1:0 "ジロ車"
- JAP_heavy_tank_artillery_equipment_1_short:0 "ジロ"
- JAP_heavy_tank_artillery_equipment_2:0 "試製五式十五糎自走砲 ホチ"
- JAP_heavy_tank_artillery_equipment_2_short:0 "ホチ"
- JAP_heavy_tank_destroyer_equipment_1:0 "試製十糎対戦車自走砲 カト"
- JAP_heavy_tank_destroyer_equipment_1_short:0 "カト"
- JAP_heavy_tank_destroyer_equipment_2:0 "試製新砲戦車（甲） ホリ"
- JAP_heavy_tank_destroyer_equipment_2_short:0 "ホリ"
+ JAP_medium_tank_destroyer_equipment_1:0 "Type-1 Tank Destroyer Ho-Ni I"
+ JAP_medium_tank_destroyer_equipment_1_short:0 "Ho-Ni I"
+ JAP_medium_tank_destroyer_equipment_2:0 "Type-3 Tank Destroyer Ho-Ni III"
+ JAP_medium_tank_destroyer_equipment_2_short:0 "Ho-Ni III"
+ JAP_medium_tank_destroyer_equipment_3:0 "Prototype 5.5cm Anti-tank SPG Na-To"
+ JAP_medium_tank_destroyer_equipment_3_short:0 "Na-To"
+ JAP_medium_tank_artillery_equipment_1:0 "Type-2 Tank Destroyer Ho-I"
+ JAP_medium_tank_artillery_equipment_1_short:0 "Ho-I"
+ JAP_medium_tank_artillery_equipment_2:0 "Type-4 15cm SPG Ho-Ro"
+ JAP_medium_tank_artillery_equipment_2_short:0 "Ho-Ro"
+ JAP_medium_tank_artillery_equipment_3:0 "Prototype-4 Heavy Mortar Ha-To"
+ JAP_medium_tank_artillery_equipment_3_short:0 "Ha-To"
+ JAP_light_tank_artillery_equipment_3:0 "Prototype 7.5cm SPA Ku-Se"
+ JAP_light_tank_artillery_equipment_3_short:0 "Ku-Se"
+ JAP_light_tank_destroyer_equipment_3:0 "Prototype-5 4.7cm SPG Ho-Ru"
+ JAP_light_tank_destroyer_equipment_3_short:0 "Ho-Ru"
+ JAP_heavy_tank_artillery_equipment_1:0 "Ji-Ro Tank"
+ JAP_heavy_tank_artillery_equipment_1_short:0 "Ji-Ro"
+ JAP_heavy_tank_artillery_equipment_2:0 "Prototype-5 15cm SPG Ho-Chi"
+ JAP_heavy_tank_artillery_equipment_2_short:0 "Ho-Chi"
+ JAP_heavy_tank_destroyer_equipment_1:0 "Prototype 10cm Anti-tank SPG Ka-To"
+ JAP_heavy_tank_destroyer_equipment_1_short:0 "Ka-To"
+ JAP_heavy_tank_destroyer_equipment_2:0 "New Trial Tank Gun (Shell) Ho-Ri"
+ JAP_heavy_tank_destroyer_equipment_2_short:0 "Ho-Ri"
  JAP_modern_tank_equipment_1:1 "Modern Tank I"
  JAP_modern_tank_equipment_1_short:1 "Mod. Tank I"
  JAP_modern_tank_equipment_5:0 "Type 61"
  JAP_modern_tank_equipment_5_short:0 "Type 61"
- JAP_fighter_equipment_1_short:0 "キ27 九七式戦"
+ JAP_fighter_equipment_1_short:0 "Ki-21 Type-97"
  JAP_fighter_equipment_4:0 "Kyushu J7W1 Shinden"
  JAP_fighter_equipment_4_short:0 "J7W1 Shinden"
  JAP_heavy_fighter_equipment_3:0 "Kawasaki Ki-102 Kou"
@@ -71,7 +71,7 @@
  JAP_tac_bomber_equipment_4:0 "Tachikawa Ki-74"
  JAP_tac_bomber_equipment_4_short:0 "Ki-74"
  JAP_CAS_equipment_1_short:0 "Ki-32 Type 98"
- JAP_CAS_equipment_2_short:0 "キ51 九九襲撃"
+ JAP_CAS_equipment_2_short:0 "Ki-51"
  JAP_CAS_equipment_4:0 "Tachikawa Ki-93"
  JAP_CAS_equipment_4_short:0 "Ki-93"
  JAP_nav_bomber_equipment_1:0 "Mitsubishi G3M Rikko"
@@ -82,21 +82,21 @@
  JAP_nav_bomber_equipment_3_short:0 "P1Y Ginga"
  JAP_nav_bomber_equipment_4:0 "Mitsubishi G7M Taizan"
  JAP_nav_bomber_equipment_4_short:0 "G7M Taizan"
- JAP_cv_fighter_equipment_0_short:0 "A4N 九五式艦戦"
- JAP_cv_fighter_equipment_1_short:0 "A5M 九六式艦戦"
- JAP_cv_fighter_equipment_2_short:0 "A6M 零式艦戦"
+ JAP_cv_fighter_equipment_0_short:0 "A4N Type-95"
+ JAP_cv_fighter_equipment_1_short:0 "A5M Type-96"
+ JAP_cv_fighter_equipment_2_short:0 "A6M Type-0"
  JAP_cv_fighter_equipment_4:0 "Kawanishi J6K1 Zinpu"
  JAP_cv_fighter_equipment_4_short:0 "J6K1 Zinpu"
- JAP_cv_CAS_equipment_1_short:0 "D1A2 九六式艦爆"
- JAP_cv_CAS_equipment_2_short:0 "D3A 九九式艦爆"
+ JAP_cv_CAS_equipment_1_short:0 "D1A2 Type-96"
+ JAP_cv_CAS_equipment_2_short:0 "D3A Type-99"
  JAP_cv_CAS_equipment_4:0 "D6 Ginsei"
  JAP_cv_CAS_equipment_4_short:0 "D6 Ginsei"
- JAP_cv_nav_bomber_equipment_1:0 "中島 B5N 九七式艦上攻撃機"
- JAP_cv_nav_bomber_equipment_1_short:0 "B5N 九七式艦攻"
- JAP_cv_nav_bomber_equipment_2:0 "中島 B6N 天山"
- JAP_cv_nav_bomber_equipment_2_short:0 "B6N 天山"
- JAP_cv_nav_bomber_equipment_3:0 "愛知 B7A 流星"
- JAP_cv_nav_bomber_equipment_3_short:0 "B7A 流星"
+ JAP_cv_nav_bomber_equipment_1:0 "Nakajima B5N Type-97 CV Aircraft"
+ JAP_cv_nav_bomber_equipment_1_short:0 "B5M Type-97"
+ JAP_cv_nav_bomber_equipment_2:0 "Nakajima B6N Tenzan"
+ JAP_cv_nav_bomber_equipment_2_short:0 "B6N Tenzan"
+ JAP_cv_nav_bomber_equipment_3:0 "Aichi B7A Ryūsei"
+ JAP_cv_nav_bomber_equipment_3_short:0 "B7A Ryūsei"
  JAP_cv_nav_bomber_equipment_4:0 "B8 Souzan"
  JAP_cv_nav_bomber_equipment_4_short:0 "B8 Souzan"
  JAP_jet_fighter_equipment_3:0 "Type 15 Fighter Ouden"
@@ -171,7 +171,7 @@
  JAP_light_cruiser_4:0 "Ohyodo Class"
  JAP_light_cruiser_4_desc:0 "Ohyodo type light cruiser allowed the operation of the water reconnaissance aircraft to support submarine operation, equipped aircraft hangar in the center of the ship and large catapult at the rear of the ship. Ohyodo became the last naval fleet flagship of the Japanese Navy."
  JAP_light_cruiser_5:0 "Azuma Class"
- JAP_light_cruiser_5_desc:0 "吾妻型は、 戦時中に起工すらされなかった軽巡洋艦艦型でした。 敵航空機から空母や艦隊を守る重武装、 高速力、 しかし軽装甲な巡洋艦として設計されました。 "
+ JAP_light_cruiser_5_desc:0 "The Agatsuma-class was a light cruiser model not even produced during the war. Designed as a heavily-armed fast, lightly-armored cruiser to protect carriers and fleets from enemy planes."
  JAP_light_cruiser_6:0 "Mizunase Class"
  JAP_light_cruiser_6_desc:0 ""
  JAP_light_cruiser_7:0 "Onga Class"
@@ -196,7 +196,7 @@
  JAP_battleship_2:0 "Nagato Class"
  JAP_battleship_2_desc:0 "Nagato Class battleship is the first battleship made as part of the Japanese navy 's ambitious plan to hold 8 battleships and 8 battle cruiser ships. Nagato of the first ship was familiar as a symbol of the Japanese Navy before the great war. After the defeat, it was taken over by the US military, it became a target ship of the atomic bomb experiment and it sunk."
  JAP_battleship_3:0 "Kii Class"
- JAP_battleship_3_desc:0 "紀伊型戦艦は、 架空の高速戦艦です。 大型の大和型戦艦より安価で高速な艦型を想定しています。 以前の戦艦の古い主砲を装備しますが、 高い速力と十分な装甲と対空能力は優れた抗堪性をもたらします。 "
+ JAP_battleship_3_desc:0 "The Kii-class is a fictitious high-speed battleship. It's assumed to be cheaper and faster than the Yamato-class. Equipped with old guns from previous models, its high speed, good armor, and anti-air provide excellent survivability."
  JAP_battleship_5:0 "Oumi Class"
  JAP_battleship_5_desc:0 ""
  JAP_battleship_6:0 "Wakasa Class"
@@ -233,32 +233,32 @@
  JAP_nuclear_cruiser_1_desc:0 ""
  JAP_nuclear_cruiser_2:0 "Unebi Class"
  JAP_nuclear_cruiser_2_desc:0 ""
- JAP_EQUIPMENT_VERSION_1:0 "甲"
- JAP_EQUIPMENT_VERSION_2:0 "乙"
- JAP_EQUIPMENT_VERSION_3:0 "丙"
- JAP_EQUIPMENT_VERSION_4:0 "丁"
- JAP_EQUIPMENT_VERSION_5:0 "戊"
- JAP_EQUIPMENT_VERSION_6:0 "己"
- JAP_EQUIPMENT_VERSION_7:0 "庚"
- JAP_EQUIPMENT_VERSION_8:0 "辛"
- JAP_EQUIPMENT_VERSION_9:0 "壬"
- JAP_EQUIPMENT_VERSION_10:0 "癸"
- JAP_EQUIPMENT_VERSION_11:0 "子"
- JAP_EQUIPMENT_VERSION_12:0 "丑"
- JAP_EQUIPMENT_VERSION_13:0 "艮"
- JAP_EQUIPMENT_VERSION_14:0 "寅"
- JAP_EQUIPMENT_VERSION_15:0 "卯"
- JAP_EQUIPMENT_VERSION_16:0 "辰"
- JAP_EQUIPMENT_VERSION_17:0 "巽"
- JAP_EQUIPMENT_VERSION_18:0 "巳"
- JAP_EQUIPMENT_VERSION_19:0 "午"
- JAP_EQUIPMENT_VERSION_20:0 "未"
- JAP_EQUIPMENT_VERSION_21:0 "坤"
- JAP_EQUIPMENT_VERSION_22:0 "申"
- JAP_EQUIPMENT_VERSION_23:0 "酉"
- JAP_EQUIPMENT_VERSION_24:0 "戌"
- JAP_EQUIPMENT_VERSION_25:0 "乾"
- JAP_EQUIPMENT_VERSION_26:0 "亥"
+ JAP_EQUIPMENT_VERSION_1:0 "Kō"
+ JAP_EQUIPMENT_VERSION_2:0 "Otsu"
+ JAP_EQUIPMENT_VERSION_3:0 "Hei"
+ JAP_EQUIPMENT_VERSION_4:0 "Tei"
+ JAP_EQUIPMENT_VERSION_5:0 "Bo"
+ JAP_EQUIPMENT_VERSION_6:0 "Ki"
+ JAP_EQUIPMENT_VERSION_7:0 "Kō"
+ JAP_EQUIPMENT_VERSION_8:0 "Shin"
+ JAP_EQUIPMENT_VERSION_9:0 "Jin"
+ JAP_EQUIPMENT_VERSION_10:0 "Ki"
+ JAP_EQUIPMENT_VERSION_11:0 "Shi"
+ JAP_EQUIPMENT_VERSION_12:0 "Chū"
+ JAP_EQUIPMENT_VERSION_13:0 "Yō"
+ JAP_EQUIPMENT_VERSION_14:0 "In"
+ JAP_EQUIPMENT_VERSION_15:0 "Bō"
+ JAP_EQUIPMENT_VERSION_16:0 "Shin"
+ JAP_EQUIPMENT_VERSION_17:0 "En"
+ JAP_EQUIPMENT_VERSION_18:0 "Shi"
+ JAP_EQUIPMENT_VERSION_19:0 "Go"
+ JAP_EQUIPMENT_VERSION_20:0 "Mi"
+ JAP_EQUIPMENT_VERSION_21:0 "Kon"
+ JAP_EQUIPMENT_VERSION_22:0 "Shin"
+ JAP_EQUIPMENT_VERSION_23:0 "Yū"
+ JAP_EQUIPMENT_VERSION_24:0 "Jutsu"
+ JAP_EQUIPMENT_VERSION_25:0 "Ken"
+ JAP_EQUIPMENT_VERSION_26:0 "Gai"
  USA_light_tank_destroyer_equipment_1:0 "M2A4"
  USA_light_tank_destroyer_equipment_1_short:0 "M2A4"
  USA_light_tank_artillery_equipment_1:0 "M2C1"
@@ -526,7 +526,7 @@
  SOV_light_tank_artillery_equipment_1:0 "AT-1"
  SOV_light_tank_artillery_equipment_1_short:0 "AT-1"
  SOV_light_tank_aa_equipment_1:0 "ZSU-12.7"
- SOV_light_tank_aa_equipment_1_short:0 "ZUS-12.7"
+ SOV_light_tank_aa_equipment_1_short:0 "ZSU-12.7"
  SOV_light_tank_equipment_2:0 "BT-7"
  SOV_light_tank_equipment_2_short:0 "BT-7"
  SOV_light_tank_destroyer_equipment_2:0 "SU-45"
@@ -695,7 +695,7 @@
  SOV_heavy_fighter_equipment_4_short:0 "Yak-9P-3"
  SOV_strat_bomber_equipment_4:0 "Tupolev Tu-95"
  SOV_strat_bomber_equipment_4_short:0 "Tu-95"
- SOV_heavy_fighter_equipment_3:0 "ツポレフ Tu-2P"
+ SOV_heavy_fighter_equipment_3:0 "Tupolev Tu-2P"
  SOV_heavy_fighter_equipment_3_short:0 "Tu-2P"
  SOV_tac_bomber_equipment_4:0 "Tupolev Tu-10"
  SOV_tac_bomber_equipment_4_short:0 "Tu-10"
@@ -726,7 +726,7 @@
  SOV_cv_jet_fighter_equipment_3:0 "Mikoyan-Guerevich MiG-23K"
  SOV_cv_jet_fighter_equipment_3_short:0 "MiG-23K"
  SOV_cv_jet_attacker_equipment_1:0 "Ilyushin Il-40TK"
- SOV_cv_jet_attacker_equipment_1_short:0 "Il-40TK"
+ SOV_cv_jet_attacker_equipment_1_short:0 "Il-40K"
  SOV_cv_jet_attacker_equipment_2:0 "Yakovlev Yak-28K"
  SOV_cv_jet_attacker_equipment_2_short:0 "Yak-28K"
  SOV_cv_jet_attacker_equipment_3:0 "Yakovlev Yak-36"
@@ -787,8 +787,8 @@
  GER_heavy_tank_artillery_equipment_1_short:0 "Grossgeschützwagen"
  GER_heavy_tank_aa_equipment_1:0 "Grossflakpanzer"
  GER_heavy_tank_aa_equipment_1_short:0 "Grossflakpanzer"
- GER_heavy_tank_artillery_equipment_2:0 "シュトゥルムティーガー"
- GER_heavy_tank_artillery_equipment_2_short:0 "シュトゥルムティーガー"
+ GER_heavy_tank_artillery_equipment_2:0 "Sturmtiger"
+ GER_heavy_tank_artillery_equipment_2_short:0 "Sturmtiger"
  GER_heavy_tank_aa_equipment_2:0 "Flakpanzer Tiger"
  GER_heavy_tank_aa_equipment_2_short:0 "FlakPz Tiger"
  GER_heavy_tank_aa_equipment_3:0 "Flakpanzer TigerB"
@@ -929,16 +929,16 @@
  GER_nuclear_cruiser_2_desc:0 ""
  GER_jet_fighter_equipment_2:0 "P 1101"
  GER_jet_fighter_equipment_2_short:0 "P1 101"
- GER_jet_fighter_equipment_3:0 "Fl 649"
- GER_jet_fighter_equipment_3_short:0 "Fl 649"
- GER_jet_fighter_equipment_4:0 "Fl 712"
- GER_jet_fighter_equipment_4_short:0 "Fl 712"
+ GER_jet_fighter_equipment_3:0 "FI 649"
+ GER_jet_fighter_equipment_3_short:0 "FI 649"
+ GER_jet_fighter_equipment_4:0 "FI 712"
+ GER_jet_fighter_equipment_4_short:0 "FI 712"
  GER_jet_tac_bomber_equipment_3:0 "Ju 287"
  GER_jet_tac_bomber_equipment_3_short:0 "Ju 287"
  GER_jet_tac_bomber_equipment_4:0 "Fl 779"
  GER_jet_tac_bomber_equipment_4_short:0 "Fl 779"
- GER_jet_strat_bomber_equipment_2:0 "Fl 652"
- GER_jet_strat_bomber_equipment_2_short:0 "Fl 652"
+ GER_jet_strat_bomber_equipment_2:0 "Fl652"
+ GER_jet_strat_bomber_equipment_2_short:0 "Fl652"
  GER_jet_strat_bomber_equipment_3:0 "Fl 752"
  GER_jet_strat_bomber_equipment_3_short:0 "Fl 752"
  GER_cv_jet_fighter_equipment_1:0 "He 280 F"
@@ -1355,7 +1355,7 @@
  auto_loader_2_desc:0 "An auomatic mechanism that loads shells and allows the tank to keep a high rate of fire for a prolonged period of time."
  stabilizer_2:0 "Improved Stabilizer"
  stabilizer_2_desc:0 "A mechanical device to keep the gun pointing in the same direction when the tank is moving. While not advanced enough to allow accurate firing on the move, it does allow the gunner to fire accurately during a short stop, without having to re-acquire the target."
- additional_machine_guns:0 "追加機関銃"
+ additional_machine_guns:0 "Additional Machine Guns"
  additional_machine_guns_2:0 "Improved Additional Machineguns"
  additional_machine_guns_3:0 "Advanced Additional Machineguns"
  camouflage_painting:0 "Camouflage Painting"
