--- a/localisation/english/technology/geacps_armour_l_english.yml
+++ b/localisation/english/technology/geacps_armour_l_english.yml
@@ -26,7 +26,7 @@
  mechanized_equipment_7_short:0 "Mechanized VII"
  mechanized_equipment_7_desc:0 "Mechanized infantry is infantry equipped with armored personnel carriers (APCs) or infantry fighting vehicles (IFVs) for transport and combat. Mechanized infantry is distinguished from motorized infantry in that its vehicles provide a degree of protection from hostile fire, as opposed to soft-skinned wheeled vehicles (trucks or jeeps) for motorized infantry."
  modern_tank_equipment:1 "Main Battle Tank I"
- modern_tank_equipment_desc:0 "主力戦車は偵察や支援、はたまた最前線の戦車としての役割を引き受けることができる機敏な多目的戦車である。"
+ modern_tank_equipment_desc:0 "Agile and multi-purpose, Main Battle Tanks can carry out reconnaissance and support work, and even be active on the frontlines."
  modern_tank_equipment_2:1 "Modern Tank II"
  modern_tank_equipment_2_short:1 "Mod. Tank II"
  modern_tank_equipment_2_desc:0 "Modern tanks are agile multi-purpose tanks which are able to take on many roles such as scouts, support, or even front-line tanks."
