--- a/localisation/english/technology/geacps_helicopter_l_english.yml
+++ b/localisation/english/technology/geacps_helicopter_l_english.yml
@@ -1,37 +1,37 @@
 ﻿l_english:
  helicopter_folder:0 "Helicopter"
- helicopter_folder_desc:0 "ヘリコプターとは、なんかぐるぐるして飛ぶやつである。"
+ helicopter_folder_desc:0 "Helicopters are vehicles that fly around."
  HERICOPTER:0 "Helicopter"
  recon_helicopter_equipment:0 "Recon Helicopter"
  patrol_helicopter_equipment:0 "Maritime Patrol Helicopter"
  transport_helicopter_equipment:0 "Transport Helicopter"
  attack_helicopter_equipment:0 "Attack Helicopter"
  recon_helicopter:0 "Recon Helicopter"
- recon_helicopter_desc:0 "偵察ヘリコプターは、ヘリコプターの持つホバリング能力を生かし、わずかな範囲ながらも詳細な情報を入手することができる。"
+ recon_helicopter_desc:0 "Reconnaissance Helicopters take advantage of their hovering ability to obtain detailed information within a small range."
  patrol_helicopter:0 "Maritime Patrol Helicopter"
- patrol_helicopter_desc:0 "潜水艦をいち早く見つけ出し、無力化することができる設備を備えたヘリコプター部隊。水上艦艇や航空機に対してはほぼ無力であるが、敵潜水艦に対し絶大な攻撃力を有する。"
+ patrol_helicopter_desc:0 "A helicopter company to quickly locate and neutralize submarines. Almost powerless against surface ships and aircraft, it has tremendous attack power against anything underwater."
  transport_helicopter:0 "Transport Helicopter"
- transport_helicopter_desc:0 "通常の輸送機と比べ、航続距離が短く速度も遅いが、比較的生産性が高く、かつ少人数で運用可能なヘリコプター部隊。"
+ transport_helicopter_desc:0 "Compared to normal transport aircraft, its cruising range is shorter and its speed is slower, but is relatively effiicient, as it can be operated by a small number of people."
  attack_helicopter:0 "Attack Helicopter"
- attack_helicopter_desc:0 "攻撃ヘリコプターは地上目標、特に機甲戦力に対して強力な攻撃力を持つ。ただし航続距離は短い。また、水上目標に対する攻撃も可能であるが、その効果は限定的である。"
+ attack_helicopter_desc:0 "Attack helicopters are powerful against ground targets, especially armored forces. However, their cruising range is short. They can also attack targets in the water, but their effectiveness there is limited."
  recon_helicopter_equipment_0:0 "Experimental Helicopter"
  recon_helicopter_equipment_0_short:0 "Experimental Helicopter"
- recon_helicopter_equipment_0_desc:0 "そーらを自由にとーびたいなっ！"
+ recon_helicopter_equipment_0_desc:0 "I believe I can fly!"
  recon_helicopter_equipment_1:0 "Recon Helicopter I"
  recon_helicopter_equipment_1_short:0 "Recon Helicopter I"
- recon_helicopter_equipment_1_desc:0 "敵情を偵察するためのヘリ。"
+ recon_helicopter_equipment_1_desc:0 "Helicopter used for reconnaissance of enemy forces."
  recon_helicopter_equipment_2:0 "Recon Helicopter II"
  recon_helicopter_equipment_2_short:0 "Recon Helicopter II"
- recon_helicopter_equipment_2_desc:0 "敵情を偵察するためのヘリ！"
+ recon_helicopter_equipment_2_desc:0 "Helicopter used for reconnaissance of enemy forces."
  recon_helicopter_equipment_3:0 "Recon Helicopter III"
  recon_helicopter_equipment_3_short:0 "Recon Helicopter III"
- recon_helicopter_equipment_3_desc:0 "敵情を偵察するためのヘリ"
+ recon_helicopter_equipment_3_desc:0 "Helicopter used for reconnaissance of enemy forces."
  recon_helicopter_equipment_4:0 "Recon Helicopter IV"
  recon_helicopter_equipment_4_short:0 "Recon Helicopter IV"
- recon_helicopter_equipment_4_desc:0 "敵情を偵察するためのヘリ"
+ recon_helicopter_equipment_4_desc:0 "Helicopter used for reconnaissance of enemy forces."
  recon_helicopter_equipment_5:0 "Recon Helicopter V"
  recon_helicopter_equipment_5_short:0 "Recon Helicopter V"
- recon_helicopter_equipment_5_desc:0 "敵情を偵察するためのヘリ"
+ recon_helicopter_equipment_5_desc:0 "Helicopter used for reconnaissance of enemy forces."
  transport_helicopter_equipment_0:0 "Experimental Transport Helicopter"
  transport_helicopter_equipment_0_short:0 "Experimental Transport Helicopter"
  transport_helicopter_equipment_0_desc:0 "Experimental Transport Helicopter"
@@ -46,60 +46,60 @@
  transport_helicopter_equipment_3_desc:0 "Transport Helicopter"
  transport_helicopter_equipment_4:0 "Transport Helicopter IV"
  transport_helicopter_equipment_4_short:0 "Transport Helicopter IV"
- transport_helicopter_equipment_4_desc:0 "少数の人員を空中輸送可能な輸送ヘリ。"
+ transport_helicopter_equipment_4_desc:0 "Helicopter able to transport small numbers of people by air."
  transport_helicopter_equipment_5:0 "Transport Helicopter V"
  transport_helicopter_equipment_5_short:0 "Transport Helicopter V"
- transport_helicopter_equipment_5_desc:0 "少数の人員を空中輸送可能な輸送ヘリ。"
+ transport_helicopter_equipment_5_desc:0 "Helicopter able to transport small numbers of people by air."
  patrol_helicopter_equipment_1:0 "Patrol Helicopter I"
  patrol_helicopter_equipment_1_short:0 "Patrol Helicopter I"
- patrol_helicopter_equipment_1_desc:0 "潜水艦をぶちのめして、海の安全を守ります。"
+ patrol_helicopter_equipment_1_desc:0 "Able to destroy submarines to keep the seas safe."
  patrol_helicopter_equipment_2:0 "Patrol Helicopter II"
  patrol_helicopter_equipment_2_short:0 "Patrol Helicopter II"
- patrol_helicopter_equipment_2_desc:0 "潜水艦をぶちのめして、海の安全を守ります。"
+ patrol_helicopter_equipment_2_desc:0 "Able to destroy submarines to keep the seas safe."
  patrol_helicopter_equipment_3:0 "Patrol Helicopter III"
  patrol_helicopter_equipment_3_short:0 "Patrol Helicopter III"
- patrol_helicopter_equipment_3_desc:0 "潜水艦をぶちのめして、海の安全を守ります。"
+ patrol_helicopter_equipment_3_desc:0 "Able to destroy submarines to keep the seas safe."
  patrol_helicopter_equipment_4:0 "Patrol Helicopter IV"
  patrol_helicopter_equipment_4_short:0 "Patrol Helicopter IV"
- patrol_helicopter_equipment_4_desc:0 "潜水艦をぶちのめして、海の安全を守ります。"
+ patrol_helicopter_equipment_4_desc:0 "Able to destroy submarines to keep the seas safe."
  patrol_helicopter_equipment_5:0 "Patrol Helicopter V"
  patrol_helicopter_equipment_5_short:0 "Patrol Helicopter V"
- patrol_helicopter_equipment_5_desc:0 "潜水艦をぶちのめして、海の安全を守ります。"
+ patrol_helicopter_equipment_5_desc:0 "Able to destroy submarines to keep the seas safe."
  attack_helicopter_equipment_1:0 "Attack Helicopter I"
  attack_helicopter_equipment_1_short:0 "Attack Helicopter I"
- attack_helicopter_equipment_1_desc:0 "攻撃ヘリはベトナム戦争時に開発された地上目標に対して上空より火力を投射し、これを排除する目的で開発された。"
+ attack_helicopter_equipment_1_desc:0 "Developed during the Vietnam War, attack helicopters project firepower from the sky against ground targets,  with the aim to eliminate them."
  attack_helicopter_equipment_2:0 "Attack Helicopter II"
  attack_helicopter_equipment_2_short:0 "Attack Helicopter II"
- attack_helicopter_equipment_2_desc:0 "攻撃ヘリはベトナム戦争時に開発された地上目標に対して上空より火力を投射し、これを排除する目的で開発された。"
+ attack_helicopter_equipment_2_desc:0 "Developed during the Vietnam War, attack helicopters project firepower from the sky against ground targets,  with the aim to eliminate them."
  attack_helicopter_equipment_3:0 "Attack Helicopter III"
  attack_helicopter_equipment_3_short:0 "Attack Helicopter III"
- attack_helicopter_equipment_3_desc:0 "攻撃ヘリはベトナム戦争時に開発された地上目標に対して上空より火力を投射し、これを排除する目的で開発された。"
+ attack_helicopter_equipment_3_desc:0 "Developed during the Vietnam War, attack helicopters project firepower from the sky against ground targets,  with the aim to eliminate them."
  attack_helicopter_equipment_4:0 "Attack Helicopter IV"
  attack_helicopter_equipment_4_short:0 "Attack Helicopter IV"
- attack_helicopter_equipment_4_desc:0 "攻撃ヘリはベトナム戦争時に開発された地上目標に対して上空より火力を投射し、これを排除する目的で開発された。"
+ attack_helicopter_equipment_4_desc:0 "Developed during the Vietnam War, attack helicopters project firepower from the sky against ground targets,  with the aim to eliminate them."
  attack_helicopter_equipment_5:0 "Attack Helicopter V"
  attack_helicopter_equipment_5_short:0 "Attack Helicopter V"
- attack_helicopter_equipment_5_desc:0 "攻撃ヘリはベトナム戦争時に開発された地上目標に対して上空より火力を投射し、これを排除する目的で開発された。地上目標の中でも特に機甲戦力に対しては絶大なカウンターとなりえる。ただし、これらは制空権の確保が絶対条件であり、敵制空権化でヘリコプター部隊を運用することは多大な損害をこうむるリスクを背負う必要がある。"
+ attack_helicopter_equipment_5_desc:0 "Developed during the Vietnam War, attack helicopters project firepower from the sky against ground targets, with the aim to eliminate them. They can be great counters to ground forces, especially armored ones. However, securing air superiority is a necessary condition for their use, or they risk suffering a great deal of damage if under enemy air control."
  auto_gyro:0 "Autogyro"
- auto_gyro_desc:0 "オートジャイロとは、前進することによる風の力で回転翼を回転させることによって揚力を得る航空機を言う。ヘリコプターやフェアリー・ロートダインと同じく回転翼機に分類されるが、回転翼はフリーになっていて前方からの風で風車のように回転するだけであり、基本的に動力は繋がっていないため、垂直離陸やホバリングをすることはできない。"
- auto_gyro_tooltip:0 "オートジャイロに関する研究はヘリコプターを開発する基礎研究として絶対条件であり、この研究なしにヘリコプターを開発することはできない。"
- auto_gyro_complate_tooltip:0 "我々はすでにオートジャイロを開発することに成功した。"
+ auto_gyro_desc:0 "Autogyros are aircraft that generate lift by using the force of the wind to rotate their rotor blades and move forward. Classified as rotary-wing aircraft like helicopters and Fairey Rotodynes, their blades are free and only rotate with wind from the front. Basically, as power isn't connected, vertical takeoff and hovering aren't possible with these."
+ auto_gyro_tooltip:0 "Researching autogyros is a prerequisite for helicopter development. No helicopter can be developed without this technology."
+ auto_gyro_complate_tooltip:0 "We have succesfully developed autogyros."
  turboshaft:0 "Turboshaft Engine"
- turboshaft_desc:0 "ターボシャフトエンジンはジェットエンジンの一種。ジェットエンジンが排気の噴出力を推進力として利用するのに対し、タービン排気より軸出力を取り出し、それを用いる方式である。戦車や船舶用ガスタービンなども軸出力を用いている点では同等であるが、航空機用エンジンとして用いられている場合、ターボシャフトエンジンと呼ばれ、特にヘリコプター向けとして用いられている。"
- JAP_recon_helicopter_equipment_0:0 "カ号観測機"
- JAP_recon_helicopter_equipment_0_short:0 "カ号観測機"
- JAP_recon_helicopter_equipment_5:0 "川崎重工業 OH-1 ニンジャ"
- JAP_recon_helicopter_equipment_5_short:0 "OH-1 ニンジャ"
- JAP_recon_helicopter_equipment_5_desc:0 "OH-1は、川崎重工業によって製造された陸上自衛隊の観測ヘリコプター。陸上自衛隊では愛称を「ニンジャ」としているが、機体のコールサインである「オメガ」も愛称として使われている"
- JAP_transport_helicopter_equipment_1:0 "ベル UH-1 イロコイ"
- JAP_transport_helicopter_equipment_1_short:0 "UH-1 イロコイ"
- JAP_transport_helicopter_equipment_1_desc:0 "UH-1は、アメリカ合衆国のベル・エアクラフト社が開発したモデル 204/205/212ヘリコプターのアメリカ軍における制式名称。1959年よりアメリカ陸軍で採用され、ベトナム戦争などで活躍した。現在は後継機種のシコルスキーUH-60 ブラックホークに置き換えがすすんでいるが、日本の陸上自衛隊を含めて多くの国々では現役である。(出典:Wiki)"
- JAP_attack_helicopter_equipment_5:0 "富士重工 AH-64D アパッチ・ロングボウ"
- JAP_attack_helicopter_equipment_5_short:0 "AH-64D アパッチ・ロングボウ"
- JAP_attack_helicopter_equipment_5_desc:0 "AH-64は固定武装にM230 30mmチェーンガンを持ち、ハイドラ70ロケット弾やヘルファイア対戦車ミサイルの運用が可能な攻撃ヘリコプターである。強力なレーダー、それにバックアップされる火器管制装置やGPSなどの航空電子機器を搭載しており、敵地上部隊への攻撃を迅速かつ正確に行うことができる。"
- USA_transport_helicopter_equipment_1:0 "ベル UH-1 イロコイ"
- USA_transport_helicopter_equipment_1_short:0 "UH-1 イロコイ"
- USA_transport_helicopter_equipment_1_desc:0 "UH-1は、アメリカ合衆国のベル・エアクラフト社が開発したモデル 204/205/212ヘリコプターのアメリカ軍における制式名称。1959年よりアメリカ陸軍で採用され、ベトナム戦争などで活躍した。現在は後継機種のシコルスキーUH-60 ブラックホークに置き換えがすすんでいるが、日本の陸上自衛隊を含めて多くの国々では現役である。(出典:Wiki)"
- USA_attack_helicopter_equipment_5:0 "マクドネル・ダグラス AH-64 アパッチ"
- USA_attack_helicopter_equipment_5_short:0 "AH-64 アパッチ"
- USA_attack_helicopter_equipment_5_desc:0 "AH-64は固定武装にM230 30mmチェーンガンを持ち、ハイドラ70ロケット弾やヘルファイア対戦車ミサイルの運用が可能な攻撃ヘリコプターである。強力なレーダー、それにバックアップされる火器管制装置やGPSなどの航空電子機器を搭載しており、敵地上部隊への攻撃を迅速かつ正確に行うことができる。"
+ turboshaft_desc:0 "The Turboshaft is a type of jet engine. In contrast to the normal jet engines, which use the exhaust as a propulsion method, this model extracts the shaft output from the turbine exhaust instead. Tanks and marine gas turbines both use shaft power, but only when used by aircraft it can be called a \"turboshaft\". It's used especially for helicopters."
+ JAP_recon_helicopter_equipment_0:0 "Kayaba Ka-Go"
+ JAP_recon_helicopter_equipment_0_short:0 "Kayaba Ka-Go"
+ JAP_recon_helicopter_equipment_5:0 "Kawasaki OH-1 Ninja"
+ JAP_recon_helicopter_equipment_5_short:0 "OH-1 Ninja"
+ JAP_recon_helicopter_equipment_5_desc:0 "The OH-1 is a recon helicopter, manufactured by Kawasaki Heavy Industries for the IJA. Among the armed forces, it's known mainly as \"Ninja\", but its call sign \"Omega\" is also used as a nickname."
+ JAP_transport_helicopter_equipment_1:0 "Bell UH-1 Iruquois"
+ JAP_transport_helicopter_equipment_1_short:0 "UH-1 Iroquois"
+ JAP_transport_helicopter_equipment_1_desc:0 "UH-1 is the US military designation for Model 204, 205, and 212 helicopter, developed by Bell Aircrafts. Used by the United States since 1959, it was also active in the Vietnam War. Eventually replaced by the Sikorsky UH-60 Blackhawk, it's still in active service in many countries, including Japan."
+ JAP_attack_helicopter_equipment_5:0 "Fuji AH-64D Apache Longbow"
+ JAP_attack_helicopter_equipment_5_short:0 "AH-64D Apache Longbow"
+ JAP_attack_helicopter_equipment_5_desc:0 "The AH-64 is an attack helicopter equipped with a M230 30mm chaingun, and is capable of operating Hydra 70 rockets and Hellfire anti-tank missiles. Equipped with a powerful radar and backed up by fire control systems and avionics like GPS, it can attack enemy ground forces quickly and accurately."
+ USA_transport_helicopter_equipment_1:0 "Bell UH-1 Iruquois"
+ USA_transport_helicopter_equipment_1_short:0 "UH-1 Iroquois"
+ USA_transport_helicopter_equipment_1_desc:0 "UH-1 is the US military designation for Model 204, 205, and 212 helicopter, developed by Bell Aircrafts. Used by the United States since 1959, it was also active in the Vietnam War. Eventually replaced by the Sikorsky UH-60 Blackhawk, it's still in active service in many countries, including Japan."
+ USA_attack_helicopter_equipment_5:0 "McDonnell Douglas AH-64 Apache"
+ USA_attack_helicopter_equipment_5_short:0 "AH-64D Apache"
+ USA_attack_helicopter_equipment_5_desc:0 "The AH-64 is an attack helicopter equipped with a M230 30mm chaingun, and is capable of operating Hydra 70 rockets and Hellfire anti-tank missiles. Equipped with a powerful radar and backed up by fire control systems and avionics like GPS, it can attack enemy ground forces quickly and accurately."
