--- a/localisation/english/technology/geacps_naval_l_english.yml
+++ b/localisation/english/technology/geacps_naval_l_english.yml
@@ -1,34 +1,34 @@
 ﻿l_english:
- ship_fire_extinguishing_system:0 "消化設備"
- EQ_MOD_CAT_ship_fire_extinguishing_system_TITLE:0 "消化設備"
+ ship_fire_extinguishing_system:0 "Fire Extinguishing Equipment"
+ EQ_MOD_CAT_ship_fire_extinguishing_system_TITLE:0 "Fire Extinguishing Equipment"
  EQ_MOD_CAT_CIWS_TITLE:0 "CIWS"
- EQ_MOD_SLOT_front_3_custom_slot_TITLE:0 "前部 3 カスタム"
- EQ_MOD_SLOT_front_4_custom_slot_TITLE:0 "前部 4 カスタム"
- EQ_MOD_SLOT_front_5_custom_slot_TITLE:0 "前部 5 カスタム"
- EQ_MOD_SLOT_front_6_custom_slot_TITLE:0 "前部 6 カスタム"
- EQ_MOD_SLOT_mid_4_custom_slot_TITLE:0 "中部 4 カスタム"
- EQ_MOD_SLOT_mid_5_custom_slot_TITLE:0 "中部 5 カスタム"
- EQ_MOD_SLOT_mid_6_custom_slot_TITLE:0 "中部 6 カスタム"
- EQ_MOD_SLOT_mid_7_custom_slot_TITLE:0 "中部 7 カスタム"
- EQ_MOD_SLOT_mid_8_custom_slot_TITLE:0 "中部 8 カスタム"
- EQ_MOD_SLOT_mid_9_custom_slot_TITLE:0 "中部 9 カスタム"
- EQ_MOD_SLOT_rear_3_custom_slot_TITLE:0 "後部 3 カスタム"
- EQ_MOD_SLOT_rear_4_custom_slot_TITLE:0 "後部 4 カスタム"
- EQ_MOD_SLOT_rear_5_custom_slot_TITLE:0 "後部 5 カスタム"
- EQ_MOD_SLOT_rear_6_custom_slot_TITLE:0 "後部 6 カスタム"
+ EQ_MOD_SLOT_front_3_custom_slot_TITLE:0 "Front 3 Custom"
+ EQ_MOD_SLOT_front_4_custom_slot_TITLE:0 "Front 4 Custom"
+ EQ_MOD_SLOT_front_5_custom_slot_TITLE:0 "Front 5 Custom"
+ EQ_MOD_SLOT_front_6_custom_slot_TITLE:0 "Front 6 Custom"
+ EQ_MOD_SLOT_mid_4_custom_slot_TITLE:0 "Middle 4 Custom"
+ EQ_MOD_SLOT_mid_5_custom_slot_TITLE:0 "Middle 5 Custom"
+ EQ_MOD_SLOT_mid_6_custom_slot_TITLE:0 "Middle 6 Custom"
+ EQ_MOD_SLOT_mid_7_custom_slot_TITLE:0 "Middle 7 Custom"
+ EQ_MOD_SLOT_mid_8_custom_slot_TITLE:0 "Middle 8 Custom"
+ EQ_MOD_SLOT_mid_9_custom_slot_TITLE:0 "Middle 9 Custom"
+ EQ_MOD_SLOT_rear_3_custom_slot_TITLE:0 "Rear 3 Custom"
+ EQ_MOD_SLOT_rear_4_custom_slot_TITLE:0 "Rear 4 Custom"
+ EQ_MOD_SLOT_rear_5_custom_slot_TITLE:0 "Rear 5 Custom"
+ EQ_MOD_SLOT_rear_6_custom_slot_TITLE:0 "Rear 6 Custom"
  fixed_ship_sonar_2_slot:0 "Sonar"
  fixed_ship_sonar_3_slot:0 "Sonar"
- fixed_ship_engine_2_slot:0 "第3エンジン"
- fixed_ship_fuel_storage_slot:0 "追加増槽"
- fixed_ship_fire_extinguishing_system_slot:0 "消化設備"
- ship_fire_extinguishing_system_1:0 "消化設備I型"
- ship_fire_extinguishing_system_1_desc:0 "消化設備I型"
- ship_fire_extinguishing_system_2:0 "消化設備II型"
- ship_fire_extinguishing_system_2_desc:0 "消化設備II型"
- ship_fuel_storage_1:0 "追加増槽II型"
- ship_fuel_storage_1_desc:0 "追加増槽II型"
- ship_fuel_storage_2:0 "追加増槽III型"
- ship_fuel_storage_2_desc:0 "追加増槽III型"
+ fixed_ship_engine_2_slot:0 "3rd Engine"
+ fixed_ship_fuel_storage_slot:0 "Extra Fuel Tank"
+ fixed_ship_fire_extinguishing_system_slot:0 "Fire Extinguishing Equipment"
+ ship_fire_extinguishing_system_1:0 "Fire Extinguishing Equipment I"
+ ship_fire_extinguishing_system_1_desc:0 "Fire Extinguishing Equipment I"
+ ship_fire_extinguishing_system_2:0 "Fire Extinguishing Equipment II"
+ ship_fire_extinguishing_system_2_desc:0 "Fire Extinguishing Equipment II"
+ ship_fuel_storage_1:0 "Extra Fuel Tank II"
+ ship_fuel_storage_1_desc:0 "Extra Fuel Tank II"
+ ship_fuel_storage_2:0 "Extra Fuel Tank III"
+ ship_fuel_storage_2_desc:0 "Extra Fuel Tank III"
  ship_CIWS_1:0 "CIWS I"
  ship_CIWS_1_desc:0 "CIWS I"
  ship_CIWS_2:0 "CIWS II"
@@ -332,16 +332,16 @@
  ship_light_medium_battery_8_desc:0 ""
  ship_light_battery_1:0 "85mm RF. Cannon"
  ship_light_battery_1_short:0 "Light Battery I"
- ship_light_battery_1_desc:0 "駆逐艦や小型船が使用する比較的小さな火砲。 "
+ ship_light_battery_1_desc:0 "A relatively small gun used by destroyers and light ships."
  ship_light_battery_2:0 "105 mm RF. Cannon"
  ship_light_battery_2_short:0 "Light Battery II"
- ship_light_battery_2_desc:0 "目標を素早く捉える為に動力を追加した小型火砲。 "
+ ship_light_battery_2_desc:0 "A small gun with additional power to quickly hit targets."
  ship_light_battery_3:0 "127 mm RF. Cannon"
  ship_light_battery_3_short:0 "Light Battery III"
- ship_light_battery_3_desc:0 "飛んでくる破片や過酷な天候から乗組員を守るために防弾を施した小型火砲。 "
+ ship_light_battery_3_desc:0 "A small, bulletproof gun to protect the crew from flying debris and harsh weather."
  ship_light_battery_4:0 "130 mm RF. Cannon"
  ship_light_battery_4_short:0 "Light Battery IV"
- ship_light_battery_4_desc:0 "装甲と動力を両立させた小型火砲。 "
+ ship_light_battery_4_desc:0 "Small gun with both armor and power."
  ship_light_battery_5:0 "140 mm RF. Cannon"
  ship_light_battery_5_short:0 "Light Battery V"
  ship_light_battery_5_desc:0 ""
