--- a/localisation/english/countries_europe/geacps_SPR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SPR_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  SPR_recovery_from_civil_war:0 "Recovery From Civil War"
- SPR_recovery_from_civil_war_desc:0 "3年間続いた内戦はスペインを徹底的に破壊した、我々は勝利したが、その祝勝をあげることなく瓦礫を片付け、廃墟に集って再建計画を練る必要があった。そして未だに復興は終わっていない。"
+ SPR_recovery_from_civil_war_desc:0 "Three years of civil war devastated Spain. We won, but rather than celebrate, we had to clean up rubble and wade through the ruins to plan and carry out our rebuilding. Also, the recovery isn't over yet."
  SPR_aftermath_of_the_franco_dictatorship:0 "The Aftermath of the Franco Dictatorship"
- SPR_aftermath_of_the_franco_dictatorship_desc:0 "カウディーリョたるフランシスコ・フランコ将軍は、スペインの絶対的支配者である。彼は先の大戦において卓越した外交センスで中立を維持し、祖国を破滅から救った英雄であるが、彼の独裁政治によって自由が制限され、民衆が抑圧を受けているのは事実である。"
+ SPR_aftermath_of_the_franco_dictatorship_desc:0 "General Francisco Franco, our Caudillo, is the absolute ruler of Spain. He maintained neutrality during the previous war with his excellent diplomatic skills, heroically saving his country from destruction, but it's also true that his dictatorial regime limits personal freedoms and oppresses the people."
  SPR_destroyed_industrial_infrastructure:0 "Destroyed Industrial Infrastructure"
- SPR_destroyed_industrial_infrastructure_desc:0 "内戦によってスペインの産業は跡形もなく破壊された、それに加え一部の人々がメキシコなどの新大陸諸国に渡ったことによって熟練技能者の絶対的な数も少なくなっている。"
+ SPR_destroyed_industrial_infrastructure_desc:0 "Spain's industry was completely destroyed by the civil war, while the number of skilled workers decreased due to migrations to Mexico and other New World countries."
