--- a/localisation/english/countries_new_continent/geacps_COL_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_COL_l_english.yml
@@ -1,80 +1,106 @@
 ﻿l_english:
-#国家方針
- COL_may_election:0 "5月選挙"
- COL_the_leopards:0 "ロス・レオパレード"
- COL_monopoly_exploitation_of_oil:0 "石油の独占開発"
- COL_promotion_of_heavy_chemical_plants:0 "重化学工場の推進"
- COL_construction_of_chemical_plants:0 "化学工場建設"
- COL_largescale_steel_processing_plant:0 "大規模鉄鋼加工場"
- COL_development_of_petroleum_refining_plants:0 "石油精製プラントの開発"
- COL_establishment_of_the_new_nueva_andaluca:0 "新ヌエバ・アンダルシアの設立"
- COL_recovery_of_old_territories:0 "旧領の回収"
- COL_penetration_into_VEN:0 "ベネズエラへの浸透"
- COL_expansion_into_the_eastern:0 "東部への進駐"
- COL_southern_region_collections:0 "南部地区の回収"
- COL_integration_of_PAN:0 "パナマの統合"
- COL_transition_to_a_federal_system:0 "連邦制の復活"
- COL_revival_of_the_gran_colombia:0 "グラン・コロンビアの復活"
- COL_avenge_oneself:0 "屈辱を晴らす"
- COL_conservative_party:0 "保守党"
- COL_promotion_of_oil_exploration:0 "石油開発の推進"
- COL_agricultural_importance:0 "農業重視"
- COL_mechanisation_of_agriculture:0 "農業の機械化"
- COL_fertilisers_and_farm_shortening:0 "肥料と農場の短縮化"
- COL_silk_processing_plant_construction:0 "絹加工工場建設"
- COL_promotion_of_resource_development:0 "資源開発の推進"
- COL_oil_well_development:0 "油井の開発"
- COL_opening_of_iron_mines:0 "鉄鉱山の開山"
- COL_resource_extraction_experience:0 "資源採掘の経験"
- COL_establishment_of_international_trading_companies:0 "国際貿易会社の設立"
- COL_the_question_of_national_defence:0 "国家防衛論"
- COL_increased_defence_spending:0 "国防費の増額"
- 
-#国民精神
- COL_grand_colombian_merchant_fleet:0 "グラン・コロンビアの商船隊"
- COL_significant_defence_expenditure:0 "多額の国防費"
- COL_golden_glow:0 "黄金の輝き"
- COL_reactionism:0 "復古主義"
- COL_agricultural_and_light_industrial_development_1:0 "農業・軽工業の開発"
- COL_agricultural_and_light_industrial_development_2:0 "農業・軽工業の開発"
- COL_agricultural_and_light_industrial_development_3:0 "農業・軽工業の開発"
- COL_agricultural_and_light_industrial_development_4:0 "農業・軽工業の開発"
- COL_promotion_of_heavy_industrialisation_1:0 "重工業化の推進"
- COL_promotion_of_heavy_industrialisation_2:0 "重工業化の推進"
- COL_promotion_of_heavy_industrialisation_3:0 "重工業化の推進"
- COL_promotion_of_heavy_industrialisation_4:0 "重工業化の推進"
- COL_skilled_resource_mining:0 "熟練した資源採掘"
- 
-#イベント
- COL.1.t:0 "5月選挙"
+ COL_may_election:0 "Electiones de Mayo"
+ COL_may_election_desc:0 "TODO"
+ COL_the_leopards:0 "Los Leoparades"
+ COL_the_leopards_desc:0 "TODO"
+ COL_monopoly_exploitation_of_oil:0 "Monopolize Oil Development"
+ COL_monopoly_exploitation_of_oil_desc:0 "TODO"
+ COL_promotion_of_heavy_chemical_plants:0 "Promote Heavy Chemical Plants"
+ COL_promotion_of_heavy_chemical_plants_desc:0 "TODO"
+ COL_construction_of_chemical_plants:0 "Build Chemical Plants"
+ COL_construction_of_chemical_plants_desc:0 "TODO"
+ COL_largescale_steel_processing_plant:0 "Massive Steel-processing Complexes"
+ COL_largescale_steel_processing_plant_desc:0 "TODO"
+ COL_development_of_petroleum_refining_plants:0 "Develop Oil-refining Plants"
+ COL_development_of_petroleum_refining_plants_desc:0 "TODO"
+ COL_establishment_of_the_new_nueva_andaluca:0 "Establish Neo Nueva Andalusia"
+ COL_establishment_of_the_new_nueva_andaluca_desc:0 "TODO"
+ COL_recovery_of_old_territories:0 "Retake our Former Territories"
+ COL_recovery_of_old_territories_desc:0 "TODO"
+ COL_VEN_recovery:0 "Recover Venezuela"
+ COL_VEN_recovery_desc:0 "TODO"
+ COL_ECU_recovery:0 "Recover Ecuador"
+ COL_ECU_recovery_desc:0 "TODO"
+ COL_PAN_recovery:0 "Recover Panama"
+ COL_PAN_recovery_desc:0 "TODO"
+ COL_transition_to_a_federal_system:0 "Revive the Federal System"
+ COL_transition_to_a_federal_system_desc:0 "TODO"
+ COL_revival_of_the_gran_colombia:0 "Restore Gran Colombia"
+ COL_revival_of_the_gran_colombia_desc:0 "TODO"
+ COL_avenge_oneself:0 "Avenge the Humiliation"
+ COL_avenge_oneself_desc:0 "TODO"
+ COL_conservative_party:0 "Partido Conservador"
+ COL_conservative_party_desc:0 "TODO"
+ COL_promotion_of_oil_exploration:0 "Promote Oil Development"
+ COL_promotion_of_oil_exploration_desc:0 "TODO"
+ COL_agricultural_importance:0 "Agriculture Focus"
+ COL_agricultural_importance_desc:0 "TODO"
+ COL_mechanisation_of_agriculture:0 "Mechanize Agriculture"
+ COL_mechanisation_of_agriculture_desc:0 "TODO"
+ COL_fertilisers_and_farm_shortening:0 "Downsize the Amout of Fertilizers and Farms"
+ COL_fertilisers_and_farm_shortening_desc:0 "TODO"
+ COL_silk_processing_plant_construction:0 "Silk Processing Plant Construction"
+ COL_silk_processing_plant_construction_desc:0 "TODO"
+ COL_promotion_of_resource_development:0 "Promote Resource Development"
+ COL_promotion_of_resource_development_desc:0 "TODO"
+ COL_oil_well_development:0 "Oil Well Development"
+ COL_oil_well_development_desc:0 "TODO"
+ COL_opening_of_iron_mines:0 "Open Iron Mines"
+ COL_opening_of_iron_mines_desc:0 "TODO"
+ COL_resource_extraction_experience:0 "Resource Excavation Expertise"
+ COL_resource_extraction_experience_desc:0 "TODO"
+ COL_establishment_of_international_trading_companies:0 "Establish an International Trading Company"
+ COL_establishment_of_international_trading_companies_desc:0 "TODO"
+ COL_the_question_of_national_defence:0 "Question of National Defense"
+ COL_the_question_of_national_defence_desc:0 "TODO"
+ COL_increased_defence_spending:0 "Increase Defense Spending"
+ COL_increased_defence_spending_desc:0 "TODO"
+ COL_grand_colombian_merchant_fleet:0 "The Mechant Fleet of Gran Colombia"
+ COL_significant_defence_expenditure:0 "Significant Defense Spending"
+ COL_golden_glow:0 "The Shine of Gold"
+ COL_reactionism:0 "Revanchism"
+ COL_agricultural_and_light_industrial_development_1:0 "Developing Agriculture and Light Industry"
+ COL_agricultural_and_light_industrial_development_2:0 "Developing Agriculture and Light Industry"
+ COL_agricultural_and_light_industrial_development_3:0 "Developing Agriculture and Light Industry"
+ COL_agricultural_and_light_industrial_development_4:0 "Developing Agriculture and Light Industry"
+ COL_promotion_of_heavy_industrialisation_1:0 "Promoting Heavy Industrialization"
+ COL_promotion_of_heavy_industrialisation_2:0 "Promoting Heavy Industrialization"
+ COL_promotion_of_heavy_industrialisation_3:0 "Promoting Heavy Industrialization"
+ COL_promotion_of_heavy_industrialisation_4:0 "Promoting Heavy Industrialization"
+ COL_skilled_resource_mining:0 "Skillfull Resource Mining"
+ COL.1.t:0 "Electiones de Mayo"
  COL.1.d:0 ""
- COL.1.0:0 "結果を待つのみだ……"
- COL.1.1:0 "極右だけには……"
- COL.1.2:0 "過去の栄光を！"
- COL.2.t:0 "国際貿易会社の設立"
+ COL.1.0:0 "We only await the results..."
+ COL.1.1:0 "Please no far right..."
+ COL.1.2:0 "For our past glory!"
+ COL.2.t:0 "International Trading Company Established"
  COL.2.d:0 ""
- COL.2.0:0 "経済協力と貿易を！"
- COL.3.t:0 "新ヌエバ・アンダルシアの設立"
+ COL.2.0:0 "For trade and economic cooperation!"
+ COL.3.t:0 "Birth of Neo Nueva Andalusia"
  COL.3.d:0 ""
- COL.3.0:0 "我々についてこい！"
- COL.4.t:0 "南部地区の回収"
+ COL.3.0:0 "Follow us!"
+ COL.4.t:0 "Recover Ecuador"
  COL.4.d:0 ""
- COL.4.0:0 "外交的勝利を！"
- COL.4.1:0 "軍事的勝利を！"
- COL.5.t:0 "パナマの回収"
+ COL.4.0:0 "It should be settled with diplomacy"
+ COL.4.1:0 "Prepare the reserves"
+ COL.5.t:0 "Recover Panama"
  COL.5.d:0 ""
- COL.5.0:0 "外交的勝利を！"
- COL.5.1:0 "軍事的勝利を！"
- COL.6.t:0 "ベネズエラへの浸透"
+ COL.5.0:0 "It should be settled with diplomacy"
+ COL.5.1:0 "Prepare the reserves"
+ COL.6.t:0 "Recover Venezuela"
  COL.6.d:0 ""
- COL.6.0:0 "外交的勝利を！"
- COL.6.1:0 "軍事的勝利を！"
- 
-#フラグ
- COL_conservative_party_win_1946:0 "1946年大統領選挙で保守党が勝利している"
- COL_the_leopards_win_1946:0 "1946年大統領選挙でロス・レオパレードが勝利している"
- 
-#ツールチップ
- COL_conservative_party_win:0 "保守党が勝利する"
- COL_the_leopards_win:0 "ロス・レオパレードが勝利する"
- COL_president_election_1946:0 "1946年5月5日である"
+ COL.6.0:0 "It should be settled with diplomacy"
+ COL.6.1:0 "Prepare the reserves"
+ COL.7.t:0 "Gran Colombia Restored"
+ COL.7.d:0 "The nation of Gran Colombia was founded with the Congress of Cúcuta in 1820, only to split in 1831 due to various issues, eventually becoming present-day Colombia. However, we have reclaimed all its former territories and are now in a position to declare its restoration.\nWe'll now have to deal with the media and the reorganization process for a while, but everything will calm down as time goes by."
+ COL.7.0:0 "We've finally done it!"
+ COL_attack_ECU:0 "Attack Ecuador"
+ COL_attack_PAN:0 "Attack Panama"
+ COL_attack_PRU:0 "Attack Peru"
+ COL_attack_VEN:0 "Attack Venezuela"
+ COL_states_integration:0 "Integrate [From.GetName]"
+ COL_conservative_party_win_1946:0 "The Partido Conservador has won the 1946 Presidential Election"
+ COL_the_leopards_win_1946:0 "Los Leopardo have won the 1946 Presidential Election"
+ COL_conservative_party_win:0 "The Partido Conservador has won"
+ COL_the_leopards_win:0 "Los Leopardo have won"
+ COL_president_election_1946:0 "Is May 5, 1946"
