--- a/localisation/english/generic/geacps_calendar_era_l_english.yml
+++ b/localisation/english/generic/geacps_calendar_era_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
  geacps_calendar_era_t:0 "[GetEraDesc]"
  geacps_calendar_era_tt:0 "[GetEraNameValue]"
- CALENDAR_JAP_imperial_year_t:0 "The Era after the Enthronement of Emperor Jimmu"
- CALENDAR_JAP_imperial_year_d:0 "神武天皇即位紀元は初代天皇である神武天皇が即位したとされる年を元年とする紀年法である。"
+ CALENDAR_JAP_imperial_year_t:0 "Emperor Jinmu Enthronement Era"
+ CALENDAR_JAP_imperial_year_d:0 "The Emperor Jinmu Enthronement Era is a calendar system which uses the year of Emperor Jinmu's ascension to the Japanese throne as its starting point."
  CALENDAR_JAP_imperial_year_value:0 "Kōki [?global.CALENDAR_JAP_imperial_year|T0]"
- CALENDAR_buddhist_calendar_t:0 "The Buddhist Calendar"
+ CALENDAR_buddhist_calendar_t:0 "Buddhist Calendar"
  CALENDAR_buddhist_calendar_d:0 "The Buddhist Calendar"
  CALENDAR_buddhist_calendar_value:0 "[?global.CALENDAR_buddhist_calendar|T0] BE"
- CALENDAR_christian_era_t:0 "The Christian Era"
+ CALENDAR_christian_era_t:0 "Christian Era"
  CALENDAR_christian_era_d:0 "The Christian Era"
  CALENDAR_christian_era_value:0 "[?global.year|T0] CE"
  CALENDAR_PER_year_value:0 "[?global.CALENDAR_PER_year|T0] SH"
- CALENDAR_minguo_calendar_t:0 "The Minguo Calendar"
+ CALENDAR_minguo_calendar_t:0 "Minguo Calendar"
  CALENDAR_minguo_calendar_d:0 "The Minguo Calendar"
- CALENDAR_minguo_calendar_value:0 "ROC [?global.CALENDAR_minguo_calendar|T0]"
+ CALENDAR_minguo_calendar_value:0 "Minguo [?global.CALENDAR_minguo_calendar|T0]"
  CALENDAR_JAP_era_showa_t:0 "Shōwa"
  CALENDAR_JAP_era_showa_d:0 "Shōwa"
  CALENDAR_JAP_era_showa_value:0 "Shōwa [?global.CALENDAR_JAP_era|T0]"
@@ -31,28 +31,28 @@
  CALENDAR_VIN_era_baodai_t:0 "Baodai"
  CALENDAR_VIN_era_baodai_d:0 "Baodai"
  CALENDAR_VIN_era_baodai_value:0 "Baodai [?global.CALENDAR_VIN_era|T0]"
- CALENDAR_stems_and_branches_t:0 "Stems-and-Branches"
- CALENDAR_stems_and_branches_d:0 "Stems-and-Branches"
+ CALENDAR_stems_and_branches_t:0 "Ganzhi"
+ CALENDAR_stems_and_branches_d:0 "Ganzhi"
  CALENDAR_stems_and_branches_value:0 "[GetHeavenlyStems][GetEarthlyBranches]"
- CALENDAR_heavenly_stems_1:0 "甲"
- CALENDAR_heavenly_stems_2:0 "乙"
- CALENDAR_heavenly_stems_3:0 "丙"
- CALENDAR_heavenly_stems_4:0 "丁"
- CALENDAR_heavenly_stems_5:0 "戌"
- CALENDAR_heavenly_stems_6:0 "己"
- CALENDAR_heavenly_stems_7:0 "庚"
- CALENDAR_heavenly_stems_8:0 "辛"
- CALENDAR_heavenly_stems_9:0 "壬"
- CALENDAR_heavenly_stems_10:0 "癸"
- CALENDAR_earthly_branches_1:0 "子"
- CALENDAR_earthly_branches_2:0 "丑"
- CALENDAR_earthly_branches_3:0 "寅"
- CALENDAR_earthly_branches_4:0 "卯"
- CALENDAR_earthly_branches_5:0 "辰"
- CALENDAR_earthly_branches_6:0 "巳"
- CALENDAR_earthly_branches_7:0 "午"
- CALENDAR_earthly_branches_8:0 "未"
- CALENDAR_earthly_branches_9:0 "申"
- CALENDAR_earthly_branches_10:0 "酉"
- CALENDAR_earthly_branches_11:0 "戌"
- CALENDAR_earthly_branches_12:0 "亥"
+ CALENDAR_heavenly_stems_1:0 "Jia"
+ CALENDAR_heavenly_stems_2:0 "Yi"
+ CALENDAR_heavenly_stems_3:0 "Bing"
+ CALENDAR_heavenly_stems_4:0 "Ding"
+ CALENDAR_heavenly_stems_5:0 "Wu"
+ CALENDAR_heavenly_stems_6:0 "Ji"
+ CALENDAR_heavenly_stems_7:0 "Geng"
+ CALENDAR_heavenly_stems_8:0 "Xin"
+ CALENDAR_heavenly_stems_9:0 "Ren"
+ CALENDAR_heavenly_stems_10:0 "Gui"
+ CALENDAR_earthly_branches_1:0 "Zi"
+ CALENDAR_earthly_branches_2:0 "Chou"
+ CALENDAR_earthly_branches_3:0 "Yin"
+ CALENDAR_earthly_branches_4:0 "Mao"
+ CALENDAR_earthly_branches_5:0 "Chen"
+ CALENDAR_earthly_branches_6:0 "Si"
+ CALENDAR_earthly_branches_7:0 "Wu"
+ CALENDAR_earthly_branches_8:0 "Wei"
+ CALENDAR_earthly_branches_9:0 "Shen"
+ CALENDAR_earthly_branches_10:0 "You"
+ CALENDAR_earthly_branches_11:0 "Xu"
+ CALENDAR_earthly_branches_12:0 "Hai"
