--- a/localisation/english/map/geacps_countries_cosmetic_l_english.yml
+++ b/localisation/english/map/geacps_countries_cosmetic_l_english.yml
@@ -1,13 +1,10 @@
 ﻿l_english:
- MYANMAR_union:0 "Myanmar Federation"
- MYANMAR_union_DEF:0 "the Myanmar Federation"
+ MYANMAR_union:0 "Union of Myanmar"
+ MYANMAR_union_DEF:0 "the Union of Myanmar"
  MYANMAR_union_ADJ:0 "Myanmarese"
- MYANMAR_union_republic:0 "Federal Republic of Myanmar"
- MYANMAR_union_republic_DEF:0 "the Federal Republic of Myanmar"
+ MYANMAR_union_republic:0 "Republic of the Union Myanmar"
+ MYANMAR_union_republic_DEF:0 "the Republic of the Union Myanmar"
  MYANMAR_union_republic_ADJ:0 "Myanmarese"
- MUSCATandOMAN_sultanate:0 "Sultanate of Muscat and Oman"
- MUSCATandOMAN_muscat_sultanate_DEF:0 "the Sultanate of Muscat and Oman"
- MUSCATandOMAN_muscat_sultanate_ADJ:0 "Muscat and Omani"
  TRANSJORDAN_hashemite_kingdom:0 "Hashemite Kingdom of Transjordan"
  TRANSJORDAN_hashemite_kingdom_DEF:0 "the Hashemite Kingdom of Transjordan"
  TRANSJORDAN_hashemite_kingdom_ADJ:0 "Transjordanian"
@@ -60,8 +57,6 @@
  MAC_southslab_kingdom_DEF:0 "the South Slavic Kingdom of Makedonia"
  MNT_southslab_kingdom:0 "South Slavic Kingdom of Montenegro"
  MNT_southslab_kingdom_DEF:0 "the South Slavic Kingdom of Montenegro"
- SLN_southslab_kingdom:0 "South Slavic Kingdom of Slavonia"
- SLN_southslab_kingdom_DEF:0 "the South Slavic Kingdom of Slavonia"
  SLV_southslab_kingdom:0 "South Slavic Kingdom of Slovenia"
  SLV_southslab_kingdom_DEF:0 "the South Slavic Kingdom of Slovenia"
  SER_southslab_kingdom:0 "South Slavic Kingdom of Serbia"
@@ -80,9 +75,6 @@
  ETHandERI_federation:0 "Federation of Ethiopia and Eritrea"
  ETHandERI_federation_DEF:0 "the Federation of Ethiopia and Eritrea"
  ETHandERI_federation_ADJ:0 "Ethiopian and Eritrean"
- ADEN:0 "Aden"
- ADEN_DEF:0 "Aden"
- ADEN_ADJ:0 "Adeni"
  AINUMOSIR_republic:0 "Ainu Mosir Republic"
  AINUMOSIR_republic_DEF:0 "the Ainu Mosir Republic"
  AINUMOSIR_republic_ADJ:0 "Ainu Mosiri"
@@ -115,9 +107,6 @@
  KHMER_republic:0 "Khmer Republic"
  KHMER_republic_DEF:0 "the Khmer Republic"
  KHMER_republic_ADJ:0 "Khmer"
- MA_warlord:0 "Ma Clique"
- MA_warlord_DEF:0 "the Ma Clique"
- MA_warlord_ADJ:0 "Ma"
  MALAYSIA:0 "Malaysia"
  MALAYSIA_DEF:0 "Malaysia"
  MALAYSIA_ADJ:0 "Malay"
@@ -130,9 +119,6 @@
  TRANSJORDAN_emirate:0 "Emirate of Transjordan"
  TRANSJORDAN_emirate_DEF:0 "the Emirate of Transjordan"
  TRANSJORDAN_emirate_ADJ:0 "Transjordan"
- AUS-HUN_monarchy:0 "Kingdoms and Lands Represented in the Imperial Council and Holy Hungarian Crown of St. Stephen"
- AUS-HUN_monarchy_DEF:0 "the Kingdoms and Lands Represented in the Imperial Council and Holy Hungarian Crown of St. Stephen"
- AUS-HUN_monarchy_ADJ:0 "Austro-Hungarian"
  BATAVIA_republic:0 "Batavian Republic"
  BATAVIA_republic_DEF:0 "the Batavian Republic"
  BATAVIA_republic_ADJ:0 "Batavian"
@@ -151,15 +137,6 @@
  BOHEMIAandMORAVIA_republic:0 "Republic of Bohemia and Moravia"
  BOHEMIAandMORAVIA_republic_DEF:0 "the Republic of Bohemia and Moravia"
  BOHEMIAandMORAVIA_republic_ADJ:0 "Bohemian-Moravian"
- CHURCH_state:0 "State of the Church"
- CHURCH_state_DEF:0 "the State of the Church"
- CHURCH_state_ADJ:0 "Papal States"
- CROandSLN_kingdom:0 "Kingdom of Croatia and Slavonia"
- CROandSLN_kingdom_DEF:0 "the Kingdom of Croatia and Slavonia"
- CROandSLN_kingdom_ADJ:0 "Croatian-Slavonian"
- CROandSLN_republic:0 "Republic of Croatia and Slavonia"
- CROandSLN_republic_DEF:0 "the Republic of Croatia and Slavonia"
- CROandSLN_republic_ADJ:0 "Croatian-Slavonian"
  ENG-IRE_commonwealth:0 "Commonwealth of England and Ireland"
  ENG-IRE_commonwealth_DEF:0 "the Commonwealth of England and Ireland"
  ENG-IRE_commonwealth_ADJ:0 "English-Irish"
@@ -194,15 +171,6 @@
  LIEandALS_united_principality:0 "United Principality of Liechtenstein-Alaska"
  LIEandALS_united_principality_DEF:0 "the United Principality of Liechtenstein-Alaska"
  LIEandALS_united_principality_ADJ:0 "Liechtenstein-Alaskan"
- NETHERLANDS_kingdom:0 "Kingdom of the Netherlands"
- NETHERLANDS_kingdom_DEF:0 "the Kingdom of the Netherlands"
- NETHERLANDS_kingdom_ADJ:0 "Dutch"
- NETHERLANDS_republic:0 "Republic of the Netherlands"
- NETHERLANDS_republic_DEF:0 "the Republic of the Netherlands"
- NETHERLANDS_republic_ADJ:0 "Hollander"
- NETHERLANDS_united_kingdom:0 "Kingdom of the Netherlands"
- NETHERLANDS_united_kingdom_DEF:0 "the Kingdom of the Netherlands"
- NETHERLANDS_united_kingdom_ADJ:0 "Dutch"
  PORandBRA_united_kingdom:0 "United Kingdom of Portugal and Brasil"
  PORandBRA_united_kingdom_DEF:0 "the United Kingdom of Portugal and Brasil"
  PORandBRA_united_kingdom_ADJ:0 "Portuguese-Brazilian"
@@ -501,18 +469,9 @@
  CHE-ING_republic:0 "Republic of Chechnya-Ingushetia"
  CHE-ING_republic_DEF:0 "the Republic of Chechnya-Ingushetia"
  CHE-ING_republic_ADJ:0 "Chechen-Ingush"
- CHECHENICHKERIA_republic:0 "Chechen Republic of Ichkeria"
- CHECHENICHKERIA_republic_DEF:0 "the Chechen Republic of Ichkeria"
- CHECHENICHKERIA_republic_ADJ:0 "Chechen Ichkeria"
  COURLANDandSEMIGALLIA_duchy:0 "Duchy of Courland and Semigallia"
  COURLANDandSEMIGALLIA_duchy_DEF:0 "the Duchy of Courland and Semigallia"
  COURLANDandSEMIGALLIA_duchy_ADJ:0 "Courlander-Semigallian"
- CROandSLNandDAL_kingdom:0 "Kingdom of Croatia, Slavonia and Dalmatia"
- CROandSLNandDAL_kingdom_DEF:0 "the Kingdom of Croatia, Slavonia and Dalmatia"
- CROandSLNandDAL_kingdom_ADJ:0 "Croatian-Slavonian-Dalmatian"
- CROandSLNandDAL_republic:0 "Republic of Croatia, Slavonia and Dalmatia"
- CROandSLNandDAL_republic_DEF:0 "the Republic of Croatia, Slavonia and Dalmatia"
- CROandSLNandDAL_republic_ADJ:0 "Croatian-Slavonian-Dalmatian"
  CZECHSLOVAKIA_socialist_republic:0 "Socialist Republic of Czechoslovakia"
  CZECHSLOVAKIA_socialist_republic_DEF:0 "the Socialist Republic of Czechoslovakia"
  CZECHSLOVAKIA_socialist_republic_ADJ:0 "Czechoslovak"
@@ -676,3 +635,32 @@
  AUSSA_sultanate:0 "Sultanate of Aussa"
  AUSSA_sultanate_DEF:0 "the Sultanate of Aussa"
  AUSSA_sultanate_ADJ:0 "Aussa"
+ MSCandOMA_sultanate:0 "Sultanate of Muscat and Oman"
+ MSCandOMA_muscat_sultanate_DEF:0 "the Sultanate of Muscat and Oman"
+ MSCandOMA_muscat_sultanate_ADJ:0 "Muscati and Omani"
+ AUSandHUN_lands:0 "Austrian Lands and Lands of the Holy Hungarian Crown of St. Stephen"
+ AUSandHUN_lands_DEF:0 "the Austrian Lands and the Lands of the Holy Hungarian Crown of St. Stephen"
+ AUSandHUN_lands_ADJ:0 "Austro-Hungarian"
+ CROandSLNandDAL_kingdom:0 "Kingdom of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_kingdom_DEF:0 "the Kingdom of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_kingdom_ADJ:0 "Croatian, Slavonian and Dalmatian"
+ CROandSLNandDAL_republic:0 "Republic of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_republic_DEF:0 "the Republic of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_republic_ADJ:0 "Croatian, Slavonian and Dalmatian"
+ CROandSLN_kingdom:0 "Kingdom of Croatia and Slavonia"
+ CROandSLN_kingdom_DEF:0 "the Kingdom of Croatia and Slavonia"
+ CROandSLN_kingdom_ADJ:0 "Croatian and Slavonian"
+ CROandSLN_republic:0 "Republic of Croatia and Slavonia"
+ CROandSLN_republic_DEF:0 "the Republic of Croatia and Slavonia"
+ CROandSLN_republic_ADJ:0 "Croatian and Slavonian"
+ VAT_city_and_RME_protected_territory:0 "Vatican City and Roman Protectorate"
+ VAT_city_and_RME_protected_territory_DEF:0 "the Vatican City and Roman Protectorate"
+ VAT_city_and_RME_protected_territory_ADJ:0 "Vatican"
+ SLN_southslab_kingdom:0 "South Slavic Kingdom of Slavonia"
+ SLN_southslab_kingdom_DEF:0 "the South Slavic Kingdom of Slavonia"
+ MA_military_clique:0 "Ma Clique"
+ MA_military_clique_DEF:0 "the Ma Clique"
+ MA_military_clique_ADJ:0 "Ma"
+ KRC-CHS_republic:0 "Karachay-Cherkess Republic"
+ KRC-CHS_republic_DEF:0 "the Karachay-Cherkess Republic"
+ KRC-CHS_republic_ADJ:0 "Kabardian-Cherkessian"
